@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,9 +13,13 @@
 package org.openhab.automation.jsscripting.internal;
 
 import static org.openhab.core.automation.module.script.ScriptEngineFactory.*;
+import static org.openhab.core.automation.module.script.ScriptTransformationService.OPENHAB_TRANSFORMATION_SCRIPT;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.Reader;
 import java.nio.channels.SeekableByteChannel;
 import java.nio.file.AccessMode;
 import java.nio.file.FileSystems;
@@ -23,98 +27,172 @@ import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.OpenOption;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.FileAttribute;
 import java.time.Duration;
+import java.time.Instant;
 import java.time.ZonedDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.regex.Pattern;
 
 import javax.script.ScriptContext;
 import javax.script.ScriptException;
 
-import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.graalvm.polyglot.Context;
 import org.graalvm.polyglot.Engine;
 import org.graalvm.polyglot.HostAccess;
+import org.graalvm.polyglot.Language;
+import org.graalvm.polyglot.Source;
 import org.graalvm.polyglot.Value;
+import org.graalvm.polyglot.io.IOAccess;
 import org.openhab.automation.jsscripting.internal.fs.DelegatingFileSystem;
 import org.openhab.automation.jsscripting.internal.fs.PrefixedSeekableByteChannel;
 import org.openhab.automation.jsscripting.internal.fs.ReadOnlySeekableByteArrayChannel;
 import org.openhab.automation.jsscripting.internal.fs.watch.JSDependencyTracker;
-import org.openhab.automation.jsscripting.internal.scriptengine.InvocationInterceptingScriptEngineWithInvocableAndAutoCloseable;
+import org.openhab.automation.jsscripting.internal.scriptengine.InvocationInterceptingScriptEngineWithInvocableAndCompilableAndAutoCloseable;
+import org.openhab.automation.jsscripting.internal.scriptengine.helper.LifecycleTracker;
+import org.openhab.core.OpenHAB;
 import org.openhab.core.automation.module.script.ScriptExtensionAccessor;
+import org.openhab.core.automation.module.script.internal.handler.AbstractScriptModuleHandler;
+import org.openhab.core.automation.module.script.internal.handler.ScriptActionHandler;
+import org.openhab.core.automation.module.script.internal.handler.ScriptConditionHandler;
+import org.openhab.core.items.Item;
+import org.openhab.core.library.types.QuantityType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.oracle.truffle.js.scriptengine.GraalJSScriptEngine;
 
 /**
- * GraalJS Script Engine implementation
+ * GraalJS ScriptEngine implementation
  *
  * @author Jonathan Gilbert - Initial contribution
  * @author Dan Cunningham - Script injections
+ * @author Florian Hotze - Create lock object for multi-thread synchronization; Inject the {@link JSRuntimeFeatures}
+ *         into the JS context; Fix memory leak caused by HostObject by making HostAccess reference static; Switch to
+ *         {@link Lock} for multi-thread synchronization; globals and openhab-js injection code caching
  */
 public class OpenhabGraalJSScriptEngine
-        extends InvocationInterceptingScriptEngineWithInvocableAndAutoCloseable<GraalJSScriptEngine> {
+        extends InvocationInterceptingScriptEngineWithInvocableAndCompilableAndAutoCloseable<GraalJSScriptEngine>
+        implements Lock {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(OpenhabGraalJSScriptEngine.class);
-    private static final String GLOBAL_REQUIRE = "require(\"@jsscripting-globals\");";
+    // see private constant GraalJSScriptEngine.ID
+    private static final String LANGUAGE_ID = "js";
+
+    private static final Source GLOBAL_SOURCE;
+    static {
+        try {
+            GLOBAL_SOURCE = Source.newBuilder(LANGUAGE_ID,
+                    getFileAsReader(GraalJSScriptEngineFactory.NODE_DIR + "/@jsscripting-globals.js"),
+                    "@jsscripting-globals.js").cached(true).build();
+        } catch (IOException e) {
+            throw new IllegalStateException("Failed to load @jsscripting-globals.js", e);
+        }
+    }
+
+    private static final Source OPENHAB_JS_SOURCE;
+    static {
+        try {
+            OPENHAB_JS_SOURCE = Source.newBuilder(LANGUAGE_ID,
+                    getFileAsReader(GraalJSScriptEngineFactory.NODE_DIR + "/@openhab-globals.js"),
+                    "@openhab-globals.js").cached(true).build();
+        } catch (IOException e) {
+            throw new IllegalStateException("Failed to load @openhab-globals.js", e);
+        }
+    }
+    private static final String OPENHAB_JS_INJECTION_CODE = "Object.assign(this, require('openhab'));";
+    private static final String EVENT_CONVERSION_CODE = "this.event = (typeof this.rules?._getTriggeredData === 'function') ? rules._getTriggeredData(ctx, true) : this.event";
+    private static final Pattern USE_WRAPPER_DIRECTIVE = Pattern
+            .compile("^\\s*([\"'])use wrapper(?:=(?<enabled>true|false))?\\1;?\\s*$");
+    /**
+     * Pattern to match the header of a JavaScript Immediately Invoked Function Expression (IIFE).
+     */
+    private static final Pattern IIFE_HEADER = Pattern
+            .compile("^\\s*\\(\\s*(?:function\\s*[\\w$]*\\s*\\([^)]*\\)|\\([^)]*\\)\\s*=>)\\s*\\{?.*$");
+
     private static final String REQUIRE_WRAPPER_NAME = "__wraprequire__";
-    // final CommonJS search path for our library
-    private static final Path NODE_DIR = Paths.get("node_modules");
+
+    static {
+        File cachePath = Path.of(OpenHAB.getUserDataFolder(), "cache", "org.graalvm.polyglot").toFile();
+        System.setProperty("polyglot.engine.userResourceCache", cachePath.getAbsolutePath());
+    }
+    /** Shared Polyglot {@link Engine} across all instances of {@link OpenhabGraalJSScriptEngine} */
+    private static final Engine ENGINE = Engine.newBuilder().allowExperimentalOptions(true)
+            .option("engine.WarnInterpreterOnly", "false").build();
+    /** Provides unlimited host access as well as custom translations from JS to Java Objects */
+    private static final HostAccess HOST_ACCESS = HostAccess.newBuilder(HostAccess.ALL)
+            // Translate JS-Joda ZonedDateTime to java.time.ZonedDateTime
+            .targetTypeMapping(Value.class, ZonedDateTime.class, v -> v.hasMember("withFixedOffsetZone"),
+                    v -> ZonedDateTime.parse(v.invokeMember("withFixedOffsetZone").invokeMember("toString").asString()),
+                    HostAccess.TargetMappingPrecedence.LOW)
+
+            // Translate JS-Joda Duration to java.time.Duration
+            .targetTypeMapping(Value.class, Duration.class,
+                    // picking two members to check as Duration has many common function names
+                    v -> v.hasMember("minusDuration") && v.hasMember("toNanos"),
+                    v -> Duration.ofNanos(v.invokeMember("toNanos").asLong()), HostAccess.TargetMappingPrecedence.LOW)
+
+            // Translate JS-Joda Instant to java.time.Instant
+            .targetTypeMapping(Value.class, Instant.class,
+                    // picking two members to check as Instant has many common function names
+                    v -> v.hasMember("toEpochMilli") && v.hasMember("epochSecond"),
+                    v -> Instant.ofEpochMilli(v.invokeMember("toEpochMilli").asLong()),
+                    HostAccess.TargetMappingPrecedence.LOW)
+
+            // Translate openhab-js Item to org.openhab.core.items.Item
+            .targetTypeMapping(Value.class, Item.class, v -> v.hasMember("rawItem"),
+                    v -> v.getMember("rawItem").as(Item.class), HostAccess.TargetMappingPrecedence.LOW)
+
+            // Translate openhab-js Quantity to org.openhab.core.library.types.QuantityType
+            .targetTypeMapping(Value.class, QuantityType.class, v -> v.hasMember("rawQtyType"),
+                    v -> v.getMember("rawQtyType").as(QuantityType.class), HostAccess.TargetMappingPrecedence.LOW)
+            .build();
+
+    private final Logger logger = LoggerFactory.getLogger(OpenhabGraalJSScriptEngine.class);
+
+    /** {@link Lock} synchronization of multi-thread access */
+    private final Lock lock = new ReentrantLock();
+    private final JSRuntimeFeatures jsRuntimeFeatures;
+    private final LifecycleTracker lifecycleTracker = new LifecycleTracker();
+    private final GraalJSScriptEngineConfiguration configuration;
 
     // these fields start as null because they are populated on first use
-    private @NonNullByDefault({}) String engineIdentifier;
-    private @NonNullByDefault({}) Consumer<String> scriptDependencyListener;
+    private @Nullable Consumer<String> scriptDependencyListener;
+    private String engineIdentifier = "<uninitialized>";
 
     private boolean initialized = false;
-    private String globalScript;
+    private boolean closed = false;
 
     /**
-     * Creates an implementation of ScriptEngine (& Invocable), wrapping the contained engine, that tracks the script
-     * lifecycle and provides hooks for scripts to do so too.
+     * Creates an implementation of ScriptEngine {@code (& Invocable)}, wrapping the contained engine,
+     * that tracks the script lifecycle and provides hooks for scripts to do so too.
      */
-    public OpenhabGraalJSScriptEngine(@Nullable String injectionCode) {
-        super(null); // delegate depends on fields not yet initialised, so we cannot set it immediately
-        this.globalScript = GLOBAL_REQUIRE + (injectionCode != null ? injectionCode : "");
+    public OpenhabGraalJSScriptEngine(GraalJSScriptEngineConfiguration configuration,
+            JSScriptServiceUtil jsScriptServiceUtil, JSDependencyTracker jsDependencyTracker) {
+        super(null); // delegate depends on fields not yet initialized, so we cannot set it immediately
+        this.configuration = configuration;
+        this.jsRuntimeFeatures = jsScriptServiceUtil.getJSRuntimeFeatures(lock);
 
-        // Custom translate JS Objects - > Java Objects
-        HostAccess hostAccess = HostAccess.newBuilder(HostAccess.ALL)
-                // Translate JS-Joda ZonedDateTime to java.time.ZonedDateTime
-                .targetTypeMapping(Value.class, ZonedDateTime.class, (v) -> v.hasMember("withFixedOffsetZone"), v -> {
-                    return ZonedDateTime
-                            .parse(v.invokeMember("withFixedOffsetZone").invokeMember("toString").asString());
-                }, HostAccess.TargetMappingPrecedence.LOW)
-
-                // Translate JS-Joda Duration to java.time.Duration
-                .targetTypeMapping(Value.class, Duration.class,
-                        // picking two members to check as Duration has many common function names
-                        (v) -> v.hasMember("minusDuration") && v.hasMember("toNanos"), v -> {
-                            return Duration.ofNanos(v.invokeMember("toNanos").asLong());
-                        }, HostAccess.TargetMappingPrecedence.LOW)
-                .build();
-
-        delegate = GraalJSScriptEngine.create(
-                Engine.newBuilder().allowExperimentalOptions(true).option("engine.WarnInterpreterOnly", "false")
-                        .build(),
-                Context.newBuilder("js").allowExperimentalOptions(true).allowAllAccess(true).allowHostAccess(hostAccess)
-                        .option("js.commonjs-require-cwd", JSDependencyTracker.LIB_PATH)
-                        .option("js.nashorn-compat", "true") // to ease migration
-                        .option("js.ecmascript-version", "2021") // nashorn compat will enforce es5 compatibility, we
-                                                                 // want ecma2021
-                        .option("js.commonjs-require", "true") // enable CommonJS module support
-                        .hostClassLoader(getClass().getClassLoader())
+        delegate = GraalJSScriptEngine.create(ENGINE, Context.newBuilder(LANGUAGE_ID) //
+                .allowIO(IOAccess.newBuilder() //
                         .fileSystem(new DelegatingFileSystem(FileSystems.getDefault().provider()) {
                             @Override
                             public SeekableByteChannel newByteChannel(Path path, Set<? extends OpenOption> options,
                                     FileAttribute<?>... attrs) throws IOException {
-                                if (scriptDependencyListener != null) {
-                                    scriptDependencyListener.accept(path.toString());
+                                if (configuration.isDependencyTrackingEnabled()
+                                        && path.startsWith(GraalJSScriptEngineFactory.JS_LIB_PATH)) {
+                                    Consumer<String> localScriptDependencyListener = scriptDependencyListener;
+                                    if (localScriptDependencyListener != null) {
+                                        localScriptDependencyListener.accept(path.toString());
+                                    }
                                 }
 
                                 if (path.toString().endsWith(".js")) {
@@ -122,7 +200,7 @@ public class OpenhabGraalJSScriptEngine
                                     if (isRootNodePath(path)) {
                                         InputStream is = getClass().getResourceAsStream(nodeFileToResource(path));
                                         if (is == null) {
-                                            throw new IOException("Could not read " + path.toString());
+                                            throw new IOException("Could not read " + path);
                                         }
                                         sbc = new ReadOnlySeekableByteArrayChannel(is.readAllBytes());
                                     } else {
@@ -151,7 +229,7 @@ public class OpenhabGraalJSScriptEngine
                             public Map<String, Object> readAttributes(Path path, String attributes,
                                     LinkOption... options) throws IOException {
                                 if (isRootNodePath(path)) {
-                                    return Collections.singletonMap("isRegularFile", true);
+                                    return Map.of("isRegularFile", true);
                                 }
                                 return super.readAttributes(path, attributes, options);
                             }
@@ -163,22 +241,56 @@ public class OpenhabGraalJSScriptEngine
                                 }
                                 return super.toRealPath(path, linkOptions);
                             }
-                        }));
+                        }).build())
+                .allowHostAccess(HOST_ACCESS) //
+                // usage of .allowAllAccess(true) includes
+                // - allowCreateThread(true)
+                // - allowCreateProcess(true)
+                // - allowHostClassLoading(true)
+                // - allowHostClassLookup(true)
+                // - allowPolyglotAccess(PolyglotAccess.ALL)
+                // - allowIO(true)
+                // - allowEnvironmentAccess(EnvironmentAccess.INHERIT)
+                .allowAllAccess(true) //
+                // allow class lookup from scripts
+                .hostClassLoader(getClass().getClassLoader()) //
+                // allow experimental options
+                .allowExperimentalOptions(true) //
+                // choose the path to look for CommonJS module (i.e. node_modules)
+                .option("js.commonjs-require-cwd", jsDependencyTracker.getLibraryPath().toString()) //
+                // enable Nashorn compat mode as openhab-js relies on accessors, see
+                // https://github.com/oracle/graaljs/blob/master/docs/user/NashornMigrationGuide.md#accessors
+                .option("js.nashorn-compat", "true") //
+                // if Nashorn compat mode is enabled, it will enforce ES5 compatibility, we want ECMA2025
+                .option("js.ecmascript-version", "2025") //
+                // enable CommonJS module support
+                .option("js.commonjs-require", "true"));
     }
 
     @Override
     protected void beforeInvocation() {
+        super.beforeInvocation();
+
+        logger.debug("Initializing GraalJS script engine '{}' ...", engineIdentifier);
+
+        lock.lock();
+        logger.debug("Lock acquired before invocation for engine '{}'.", engineIdentifier);
+
         if (initialized) {
             return;
         }
 
         ScriptContext ctx = delegate.getContext();
+        if (ctx == null) {
+            throw new IllegalStateException("Failed to retrieve script context");
+        }
 
         // these are added post-construction, so we need to fetch them late
-        this.engineIdentifier = (String) ctx.getAttribute(CONTEXT_KEY_ENGINE_IDENTIFIER);
-        if (this.engineIdentifier == null) {
+        String localEngineIdentifier = (String) ctx.getAttribute(CONTEXT_KEY_ENGINE_IDENTIFIER);
+        if (localEngineIdentifier == null) {
             throw new IllegalStateException("Failed to retrieve engine identifier from engine bindings");
         }
+        this.engineIdentifier = localEngineIdentifier;
 
         ScriptExtensionAccessor scriptExtensionAccessor = (ScriptExtensionAccessor) ctx
                 .getAttribute(CONTEXT_KEY_EXTENSION_ACCESSOR);
@@ -186,50 +298,317 @@ public class OpenhabGraalJSScriptEngine
             throw new IllegalStateException("Failed to retrieve script extension accessor from engine bindings");
         }
 
-        scriptDependencyListener = (Consumer<String>) ctx
-                .getAttribute("oh.dependency-listener"/* CONTEXT_KEY_DEPENDENCY_LISTENER */);
-        if (scriptDependencyListener == null) {
-            LOGGER.warn(
-                    "Failed to retrieve script script dependency listener from engine bindings. Script dependency tracking will be disabled.");
+        Consumer<String> localScriptDependencyListener = (Consumer<String>) ctx
+                .getAttribute(CONTEXT_KEY_DEPENDENCY_LISTENER);
+        if (localScriptDependencyListener == null) {
+            logger.warn(
+                    "Failed to retrieve script dependency listener from engine bindings. Script dependency tracking will be disabled for engine '{}'.",
+                    engineIdentifier);
         }
+        scriptDependencyListener = localScriptDependencyListener;
 
         ScriptExtensionModuleProvider scriptExtensionModuleProvider = new ScriptExtensionModuleProvider(
-                scriptExtensionAccessor);
+                scriptExtensionAccessor, lock, lifecycleTracker);
 
+        // Wrap the "require" function to also allow loading modules from the ScriptExtensionModuleProvider
         Function<Function<Object[], Object>, Function<String, Object>> wrapRequireFn = originalRequireFn -> moduleName -> scriptExtensionModuleProvider
-                .locatorFor(delegate.getPolyglotContext(), engineIdentifier).locateModule(moduleName)
+                .locatorFor(delegate.getPolyglotContext(), localEngineIdentifier).locateModule(moduleName)
                 .map(m -> (Object) m).orElseGet(() -> originalRequireFn.apply(new Object[] { moduleName }));
-
         delegate.getBindings(ScriptContext.ENGINE_SCOPE).put(REQUIRE_WRAPPER_NAME, wrapRequireFn);
         delegate.put("require", wrapRequireFn.apply((Function<Object[], Object>) delegate.get("require")));
 
+        // Injections into the JS runtime
+        jsRuntimeFeatures.getFeatures().forEach((key, obj) -> {
+            logger.debug("Injecting {} into the context of engine '{}' ...", key, engineIdentifier);
+            delegate.put(key, obj);
+        });
+
         initialized = true;
 
-        try {
-            eval(globalScript);
-        } catch (ScriptException e) {
-            LOGGER.error("Could not inject global script", e);
+        if (logger.isDebugEnabled()) {
+            logger.debug(
+                    "Engine '{}': isScriptFile(): {}, isScriptModule(): {}, isScriptAction(): {}, isScriptCondition(): {}, isTransformation(): {}",
+                    engineIdentifier, isScriptFile(), isScriptModule(), isScriptAction(), isScriptCondition(),
+                    isTransformation());
         }
+
+        if (!isScriptFile() && !isScriptModule() && !isTransformation()) {
+            logger.warn(
+                    "Unknown script environment detected for engine '{}': Neither script file, script module nor transformation.",
+                    engineIdentifier);
+        }
+
+        try {
+            logger.debug("Evaluating cached global script for engine '{}' ...", engineIdentifier);
+            delegate.getPolyglotContext().eval(GLOBAL_SOURCE);
+
+            if (configuration.isInjectionEnabledForAllScripts()
+                    || (isScriptModule() && configuration.isInjectionEnabledForScriptModules())
+                    || (isTransformation() && configuration.isInjectionEnabledForTransformations())) {
+                if (configuration.isInjectionCachingEnabled()) {
+                    logger.debug("Evaluating cached openhab-js injection for engine '{}' ...", engineIdentifier);
+                    delegate.getPolyglotContext().eval(OPENHAB_JS_SOURCE);
+                } else {
+                    logger.debug("Evaluating openhab-js injection from the file system for engine '{}' ...",
+                            engineIdentifier);
+                    // use delegate::eval instead of this::eval to avoid invocation of beforeInvocation, onScript, etc.
+                    delegate.eval(OPENHAB_JS_INJECTION_CODE);
+                }
+            }
+            logger.debug("Successfully initialized GraalJS script engine '{}'.", engineIdentifier);
+        } catch (ScriptException e) {
+            logger.error("Could not inject global script", e);
+        }
+    }
+
+    @Override
+    protected String onScript(String script) {
+        if (!isScriptModule()) {
+            return super.onScript(script);
+        }
+
+        // keep this extendable for more directives by checking the first n+1 lines (n = number of directives)
+        // up to two directives: "use strict" (handled by Graal) and "use wrapper"
+        List<String> header = script.lines().limit(3).toList();
+        boolean useWrapper = isScriptAction()
+                || (isScriptCondition() && configuration.isScriptConditionWrapperEnabled());
+        for (String line : header) {
+            var matcher = USE_WRAPPER_DIRECTIVE.matcher(line);
+            if (!matcher.matches()) {
+                continue;
+            }
+            var enabled = matcher.group("enabled");
+            if (enabled == null || enabled.isBlank()) {
+                useWrapper = true;
+            } else if ("false".equals(enabled)) {
+                useWrapper = false;
+            } else if ("true".equals(enabled)) {
+                useWrapper = true;
+            } else {
+                logger.warn("Invalid value '{}' for 'use wrapper' directive in script for engine '{}'.", enabled,
+                        engineIdentifier);
+            }
+        }
+
+        String newScript = script;
+
+        if (configuration.isEventConversionEnabled()) {
+            int lineNumber = 0;
+            // if the script contains an IIFE, make sure to inject the event conversion code inside the IIFE
+            for (int i = 0; i < header.size(); i++) {
+                if (IIFE_HEADER.matcher(header.get(i)).matches()) {
+                    lineNumber = i + 1;
+                    break;
+                }
+            }
+            logger.debug("Injecting event conversion code into script for engine '{}' after line {} ...",
+                    engineIdentifier, lineNumber);
+            // inject event conversion code into the script at the given line number
+            List<String> lines = newScript.lines().toList();
+            StringBuilder sb = new StringBuilder();
+            for (int i = 0; i < lines.size(); i++) {
+                if (i == lineNumber) {
+                    sb.append(EVENT_CONVERSION_CODE);
+                    sb.append(System.lineSeparator());
+                }
+                sb.append(lines.get(i));
+                sb.append(System.lineSeparator());
+            }
+            newScript = sb.toString();
+        }
+
+        if (useWrapper) {
+            logger.debug("Wrapping script for engine '{}' ...", engineIdentifier);
+            newScript = "(function() {" + System.lineSeparator() + newScript + System.lineSeparator() + "})()";
+        }
+        return super.onScript(newScript);
+    }
+
+    @Override
+    protected Object afterInvocation(Object obj) {
+        lock.unlock();
+        logger.debug("Lock released after invocation for engine '{}'.", engineIdentifier);
+        return super.afterInvocation(obj);
+    }
+
+    @Override
+    protected Exception afterThrowsInvocation(Exception e) {
+        lock.unlock();
+        return super.afterThrowsInvocation(e);
+    }
+
+    @Override
+    public void close() throws Exception {
+        if (closed) {
+            logger.debug("Engine '{}' is already disposed and closed.", engineIdentifier);
+            return;
+        }
+
+        lock.lock();
+        try {
+            try {
+                jsRuntimeFeatures.close();
+                this.lifecycleTracker.dispose();
+            } finally {
+                logger.debug("Engine '{}' disposed.", engineIdentifier);
+                super.close();
+                logger.debug("Engine '{}' closed.", engineIdentifier);
+            }
+        } finally {
+            closed = true;
+            lock.unlock();
+        }
+    }
+
+    /**
+     * Tests if the script is a script file, i.e. it is loaded from a JavaScript file.
+     * 
+     * @return true if the script is loaded from a JavaScript file, false otherwise
+     */
+    private boolean isScriptFile() {
+        ScriptContext ctx = delegate.getContext();
+        if (ctx == null) {
+            logger.warn("Failed to retrieve script context from engine '{}'.", engineIdentifier);
+            return false;
+        }
+        return ctx.getAttribute("javax.script.filename") != null;
+    }
+
+    /**
+     * Get the module type id (if any) of the module executing the script.
+     * 
+     * @return the module type id (if any) of the module executing the script, or null if the script is not a module
+     */
+    private @Nullable String getModuleTypeId() {
+        ScriptContext ctx = delegate.getContext();
+        if (ctx == null) {
+            logger.warn("Failed to retrieve script context from engine '{}'.", engineIdentifier);
+            return null;
+        }
+
+        Object value = ctx.getAttribute(AbstractScriptModuleHandler.CONTEXT_KEY_MODULE_TYPE_ID);
+        if (value instanceof String str) {
+            return str;
+        }
+        return null;
+    }
+
+    /**
+     * Tests if the script is a script module, i.e. executed by an implementation of
+     * {@link AbstractScriptModuleHandler}.
+     * 
+     * @return true if the script is a script module, false otherwise
+     */
+    private boolean isScriptModule() {
+        String moduleTypeId = getModuleTypeId();
+        return moduleTypeId != null && moduleTypeId.startsWith("script.");
+    }
+
+    /**
+     * Tests if a script is a script action, i.e. executed by the ScriptActionHandler.
+     * 
+     * @return true if the script is a script action, false otherwise
+     */
+    private boolean isScriptAction() {
+        return ScriptActionHandler.TYPE_ID.equals(getModuleTypeId());
+    }
+
+    /**
+     * Tests if the script is a script condition, i.e. executed by the ScriptConditionHandler.
+     * 
+     * @return true if the script is a script condition, false otherwise
+     */
+    private boolean isScriptCondition() {
+        return ScriptConditionHandler.TYPE_ID.equals(getModuleTypeId());
+    }
+
+    /**
+     * Tests if the script is a transformation script, i.e. created from the script transformation service.
+     * 
+     * @return true if it is a transformation script, false otherwise
+     */
+    private boolean isTransformation() {
+        ScriptContext ctx = delegate.getContext();
+        if (ctx == null) {
+            logger.warn("Failed to retrieve script context from engine '{}'.", engineIdentifier);
+            return false;
+        }
+        return engineIdentifier.startsWith(OPENHAB_TRANSFORMATION_SCRIPT);
     }
 
     /**
      * Tests if this is a root node directory, `/node_modules`, `C:\node_modules`, etc...
      *
-     * @param path
-     * @return
+     * @param path a root path
+     * @return whether the given path is a node root directory
      */
-    private boolean isRootNodePath(Path path) {
-        return path.startsWith(path.getRoot().resolve(NODE_DIR));
+    private static boolean isRootNodePath(Path path) {
+        return path.startsWith(path.getRoot().resolve(GraalJSScriptEngineFactory.NODE_DIR));
     }
 
     /**
      * Converts a root node path to a class resource path for loading local modules
      * Ex: C:\node_modules\foo.js -> /node_modules/foo.js
      *
-     * @param path
-     * @return
+     * @param path a root path, e.g. C:\node_modules\foo.js
+     * @return the class resource path for loading local modules
      */
-    private String nodeFileToResource(Path path) {
+    private static String nodeFileToResource(Path path) {
         return "/" + path.subpath(0, path.getNameCount()).toString().replace('\\', '/');
+    }
+
+    /**
+     * @param fileName filename relative to the resources folder
+     * @return file as {@link InputStreamReader}
+     */
+    private static Reader getFileAsReader(String fileName) throws IOException {
+        InputStream ioStream = OpenhabGraalJSScriptEngine.class.getClassLoader().getResourceAsStream(fileName);
+
+        if (ioStream == null) {
+            throw new IOException(fileName + " not found");
+        }
+
+        return new InputStreamReader(ioStream);
+    }
+
+    @Override
+    public void lock() {
+        lock.lock();
+        logger.debug("Lock acquired for engine '{}'.", engineIdentifier);
+    }
+
+    @Override
+    public void lockInterruptibly() throws InterruptedException {
+        lock.lockInterruptibly();
+    }
+
+    @Override
+    public boolean tryLock() {
+        return lock.tryLock();
+    }
+
+    @Override
+    public boolean tryLock(long l, TimeUnit timeUnit) throws InterruptedException {
+        return lock.tryLock(l, timeUnit);
+    }
+
+    @Override
+    public void unlock() {
+        lock.unlock();
+        logger.debug("Lock released for engine '{}'.", engineIdentifier);
+    }
+
+    @Override
+    public Condition newCondition() {
+        return lock.newCondition();
+    }
+
+    /**
+     * Gets the Graal language of {@link OpenhabGraalJSScriptEngine}.
+     * 
+     * @return the Graal language of {@link OpenhabGraalJSScriptEngine} or {@code null} if not available
+     */
+    public static @Nullable Language getLanguage() {
+        return ENGINE.getLanguages().get(LANGUAGE_ID);
     }
 }
