@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import static org.openhab.automation.pwm.internal.PWMConstants.*;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -62,7 +61,14 @@ public class PWMTriggerType extends TriggerType {
                 .withDefault("0") //
                 .withLabel("Min Dutycycle") //
                 .withUnit("%") //
-                .withDescription("The dutycycle will be min this value").build());
+                .withDescription("The dutycycle below this value will be increased to this value").build());
+        configDescriptions.add(ConfigDescriptionParameterBuilder.create(CONFIG_EQUATE_MIN_TO_ZERO, Type.BOOLEAN) //
+                .withRequired(false) //
+                .withMultiple(false) //
+                .withDefault("false") //
+                .withLabel("Equate Min Dutycycle to 0") //
+                .withDescription("True if the dutycycle below Min Dutycycle should be set to 0 (defaults to false)")
+                .build());
         configDescriptions.add(ConfigDescriptionParameterBuilder.create(CONFIG_MAX_DUTYCYCLE, Type.DECIMAL) //
                 .withRequired(false) //
                 .withMultiple(false) //
@@ -71,7 +77,14 @@ public class PWMTriggerType extends TriggerType {
                 .withDefault("100") //
                 .withUnit("%") //
                 .withLabel("Max Dutycycle") //
-                .withDescription("The dutycycle will be max this value").build());
+                .withDescription("The dutycycle above this value will be increased to 100").build());
+        configDescriptions.add(ConfigDescriptionParameterBuilder.create(CONFIG_EQUATE_MAX_TO_HUNDRED, Type.BOOLEAN) //
+                .withRequired(false) //
+                .withMultiple(false) //
+                .withDefault("true") //
+                .withLabel("Equate Max Dutycycle to 100") //
+                .withDescription("True if the dutycycle above Max Dutycycle should be set to 100 (defaults to true)")
+                .build());
         configDescriptions.add(ConfigDescriptionParameterBuilder.create(CONFIG_DEAD_MAN_SWITCH, Type.DECIMAL) //
                 .withRequired(false) //
                 .withMultiple(false) //
@@ -83,7 +96,7 @@ public class PWMTriggerType extends TriggerType {
                         "If the duty cycle Item is not updated within this time (in ms), the output is switched off")
                 .build());
 
-        List<Output> outputs = Collections.singletonList(new Output(OUTPUT, OnOffType.class.getName(), "Output",
+        List<Output> outputs = List.of(new Output(OUTPUT, OnOffType.class.getName(), "Output",
                 "Output value of the PWM module", Set.of("command"), null, null));
 
         return new PWMTriggerType(configDescriptions, outputs);
