@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -22,6 +22,7 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyManagementException;
@@ -43,7 +44,6 @@ import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
-import org.apache.commons.lang3.StringUtils;
 import org.openhab.binding.digitalstrom.internal.lib.config.Config;
 import org.openhab.binding.digitalstrom.internal.lib.manager.ConnectionManager;
 import org.openhab.binding.digitalstrom.internal.lib.serverconnection.HttpTransport;
@@ -52,10 +52,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * The {@link HttpTransportImpl} executes an request to the digitalSTROM-Server.
+ * The {@link HttpTransportImpl} executes a request to the digitalSTROM-Server.
  * <p>
  * If a {@link Config} is given at the constructor. It sets the SSL-Certificate what is set in
- * {@link Config#getCert()}. If there is no SSL-Certificate, but an path to an external SSL-Certificate file what is set
+ * {@link Config#getCert()}. If there is no SSL-Certificate, but a path to an external SSL-Certificate file what is set
  * in {@link Config#getTrustCertPath()} this will be set. If no SSL-Certificate is set in the {@link Config} it will be
  * red out from the server and set in {@link Config#setCert(String)}.
  *
@@ -68,8 +68,8 @@ import org.slf4j.LoggerFactory;
  * </p>
  * <p>
  * If a {@link ConnectionManager} is given at the constructor, the session-token is not needed by requests and the
- * {@link ConnectionListener}, which is registered at the {@link ConnectionManager}, will be automatically informed
- * about
+ * {@link org.openhab.binding.digitalstrom.internal.lib.listener.ConnectionListener}, which is registered at the
+ * {@link ConnectionManager}, will be automatically informed about
  * connection state changes through the {@link #execute(String, int, int)} method.
  * </p>
  *
@@ -334,7 +334,12 @@ public class HttpTransportImpl implements HttpTransport {
     }
 
     private boolean checkNeededSessionToken(String request) {
-        String functionName = StringUtils.substringAfterLast(StringUtils.substringBefore(request, "?"), "/");
+        String requestFirstPart = request;
+        int indexOfSeparator = request.indexOf("?");
+        if (indexOfSeparator >= 0) {
+            requestFirstPart = request.substring(0, request.indexOf("?"));
+        }
+        String functionName = requestFirstPart.substring(requestFirstPart.lastIndexOf("/") + 1);
         return !DsAPIImpl.METHODS_MUST_NOT_BE_LOGGED_IN.contains(functionName);
     }
 
@@ -347,9 +352,13 @@ public class HttpTransportImpl implements HttpTransport {
                 correctedRequest = correctedRequest + "?" + ParameterKeys.TOKEN + "=" + sessionToken;
             }
         } else {
-            correctedRequest = StringUtils.replaceOnce(correctedRequest, StringUtils.substringBefore(
-                    StringUtils.substringAfter(correctedRequest, ParameterKeys.TOKEN + "="), "&"), sessionToken);
-
+            String strippedRequest = correctedRequest
+                    .substring(correctedRequest.indexOf(ParameterKeys.TOKEN + "=") + ParameterKeys.TOKEN.length() + 1);
+            int indexOfSeparator = strippedRequest.indexOf("&");
+            if (indexOfSeparator >= 0) {
+                strippedRequest = strippedRequest.substring(0, indexOfSeparator);
+            }
+            correctedRequest = correctedRequest.replaceFirst(strippedRequest, sessionToken);
         }
         return correctedRequest;
     }
@@ -358,7 +367,7 @@ public class HttpTransportImpl implements HttpTransport {
         String correctedRequest = request;
         if (correctedRequest != null && !correctedRequest.isBlank()) {
             correctedRequest = fixRequest(correctedRequest);
-            URL url = new URL(this.uri + correctedRequest);
+            URL url = URI.create(this.uri + correctedRequest).toURL();
             HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
             if (connection != null) {
                 connection.setConnectTimeout(connectTimeout);
@@ -535,7 +544,7 @@ public class HttpTransportImpl implements HttpTransport {
     private String getPEMCertificateFromServer(String host) {
         HttpsURLConnection connection = null;
         try {
-            URL url = new URL(host);
+            URL url = URI.create(host).toURL();
 
             connection = (HttpsURLConnection) url.openConnection();
             connection.setHostnameVerifier(hostnameVerifier);
