@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,13 +14,14 @@ package org.openhab.binding.ftpupload.internal;
 
 import static org.openhab.binding.ftpupload.internal.FtpUploadBindingConstants.THING_TYPE_IMAGERECEIVER;
 
-import java.util.Collections;
 import java.util.Dictionary;
 import java.util.Set;
 
 import org.apache.ftpserver.DataConnectionConfigurationFactory;
 import org.apache.ftpserver.FtpServerConfigurationException;
 import org.apache.ftpserver.ftplet.FtpException;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.ftpupload.internal.ftp.FtpServer;
 import org.openhab.binding.ftpupload.internal.handler.FtpUploadHandler;
 import org.openhab.core.thing.Thing;
@@ -42,16 +43,17 @@ import org.slf4j.LoggerFactory;
  *
  * @author Pauli Anttila - Initial contribution
  */
+@NonNullByDefault
 @Component(service = ThingHandlerFactory.class, configurationPid = "binding.ftpupload")
 public class FtpUploadHandlerFactory extends BaseThingHandlerFactory {
     private final Logger logger = LoggerFactory.getLogger(FtpUploadHandlerFactory.class);
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_IMAGERECEIVER);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_IMAGERECEIVER);
 
     private final int DEFAULT_PORT = 2121;
     private final int DEFAULT_IDLE_TIMEOUT = 60;
 
-    private FtpServer ftpServer;
+    private @Nullable FtpServer ftpServer;
 
     @Override
     public boolean supportsThingType(ThingTypeUID thingTypeUID) {
@@ -59,7 +61,7 @@ public class FtpUploadHandlerFactory extends BaseThingHandlerFactory {
     }
 
     @Override
-    protected ThingHandler createHandler(Thing thing) {
+    protected @Nullable ThingHandler createHandler(Thing thing) {
         ThingTypeUID thingTypeUID = thing.getThingTypeUID();
 
         if (thingTypeUID.equals(THING_TYPE_IMAGERECEIVER)) {
@@ -89,15 +91,16 @@ public class FtpUploadHandlerFactory extends BaseThingHandlerFactory {
 
     protected synchronized void modified(ComponentContext componentContext) {
         stopFtpServer();
-        Dictionary<String, Object> properties = componentContext.getProperties();
+        Dictionary<String, @Nullable Object> properties = componentContext.getProperties();
         DataConnectionConfigurationFactory dataConnectionConfigurationFactory = new DataConnectionConfigurationFactory();
 
         int port = DEFAULT_PORT;
         int idleTimeout = DEFAULT_IDLE_TIMEOUT;
 
-        if (properties.get("port") != null) {
-            String strPort = properties.get("port").toString();
-            if (!strPort.isEmpty()) {
+        Object objPort = properties.get("port");
+        if (objPort != null) {
+            String strPort = objPort.toString();
+            if (strPort != null && !strPort.isEmpty()) {
                 try {
                     port = Integer.valueOf(strPort);
                 } catch (NumberFormatException e) {
@@ -106,9 +109,10 @@ public class FtpUploadHandlerFactory extends BaseThingHandlerFactory {
             }
         }
 
-        if (properties.get("idleTimeout") != null) {
-            String strIdleTimeout = properties.get("idleTimeout").toString();
-            if (!strIdleTimeout.isEmpty()) {
+        Object objIdleTimeout = properties.get("idleTimeout");
+        if (objIdleTimeout != null) {
+            String strIdleTimeout = objPort.toString();
+            if (strIdleTimeout != null && !strIdleTimeout.isEmpty()) {
                 try {
                     idleTimeout = Integer.valueOf(strIdleTimeout);
                 } catch (NumberFormatException e) {
