@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,7 +19,6 @@ import static org.openhab.core.thing.ThingStatus.ONLINE;
 
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -56,6 +55,7 @@ import org.openhab.binding.heos.internal.resources.HeosEventListener;
 import org.openhab.binding.heos.internal.resources.HeosMediaEventListener;
 import org.openhab.binding.heos.internal.resources.Telnet;
 import org.openhab.binding.heos.internal.resources.Telnet.ReadException;
+import org.openhab.core.library.CoreItemFactory;
 import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.Channel;
@@ -83,9 +83,9 @@ import org.slf4j.LoggerFactory;
  */
 @NonNullByDefault
 public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventListener {
-    private final Logger logger = LoggerFactory.getLogger(HeosBridgeHandler.class);
-
     private static final int HEOS_PORT = 1255;
+
+    private final Logger logger = LoggerFactory.getLogger(HeosBridgeHandler.class);
 
     private final Set<HeosMediaEventListener> heosMediaEventListeners = new CopyOnWriteArraySet<>();
     private final List<HeosPlayerDiscoveryListener> playerDiscoveryList = new CopyOnWriteArrayList<>();
@@ -121,16 +121,13 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
         if (command instanceof RefreshType) {
             return;
         }
-        @Nullable
         Channel channel = this.getThing().getChannel(channelUID.getId());
         if (channel == null) {
             logger.debug("No valid channel found");
             return;
         }
 
-        @Nullable
         ChannelTypeUID channelTypeUID = channel.getChannelTypeUID();
-        @Nullable
         HeosChannelHandler channelHandler = channelHandlerFactory.getChannelHandler(channelUID, this, channelTypeUID);
         if (channelHandler != null) {
             try {
@@ -157,7 +154,6 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
     }
 
     private void delayedInitialize() {
-        @Nullable
         HeosFacade connection = null;
         try {
             logger.debug("Running scheduledStartUp job");
@@ -170,11 +166,9 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
             // gets all available player and groups to ensure that the system knows
             // about the conjunction between the groupMemberHash and the GID
             triggerPlayerDiscovery();
-            @Nullable
             String username = configuration.username;
-            @Nullable
             String password = configuration.password;
-            if (username != null && !"".equals(username) && password != null && !"".equals(password)) {
+            if (!username.isBlank() && !password.isBlank()) {
                 login(connection, username, password);
             } else {
                 updateStatus(ThingStatus.ONLINE, ThingStatusDetail.CONFIGURATION_ERROR,
@@ -195,9 +189,7 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
 
     private void fetchPlayersAndGroups() {
         try {
-            @Nullable
             Player[] onlinePlayers = getApiConnection().getPlayers().payload;
-            @Nullable
             Group[] onlineGroups = getApiConnection().getGroups().payload;
 
             if (onlinePlayers != null && onlineGroups != null) {
@@ -208,21 +200,16 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
         }
     }
 
-    private void updatePlayerStatus(@Nullable Player[] onlinePlayers, @Nullable Group[] onlineGroups) {
-        if (onlinePlayers == null || onlineGroups == null) {
-            return;
-        }
+    private void updatePlayerStatus(Player[] onlinePlayers, Group[] onlineGroups) {
         Set<String> players = Stream.of(onlinePlayers).map(p -> Objects.toString(p.playerId))
                 .collect(Collectors.toSet());
         Set<String> groups = Stream.of(onlineGroups).map(p -> p.id).collect(Collectors.toSet());
 
         for (Thing thing : getThing().getThings()) {
             try {
-                @Nullable
                 ThingHandler handler = thing.getHandler();
-                if (handler instanceof HeosThingBaseHandler) {
+                if (handler instanceof HeosThingBaseHandler heosHandler) {
                     Set<String> target = handler instanceof HeosPlayerHandler ? players : groups;
-                    HeosThingBaseHandler heosHandler = (HeosThingBaseHandler) handler;
                     String id = heosHandler.getId();
 
                     if (target.contains(id)) {
@@ -261,7 +248,6 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
             return;
         }
 
-        @Nullable
         HeosError error = response.getError();
         logger.debug("Failed to login: {}", error);
         updateStatus(ONLINE, ThingStatusDetail.CONFIGURATION_ERROR,
@@ -277,7 +263,6 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
             cancel(future);
         }
 
-        @Nullable
         HeosFacade localApiConnection = apiConnection;
         if (localApiConnection == null) {
             logger.debug("Not disposing bridge because of missing apiConnection");
@@ -297,18 +282,20 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
     @Override
     public synchronized void childHandlerDisposed(ThingHandler childHandler, Thing childThing) {
         logger.debug("Disposing child handler for: {}.", childThing.getUID().getId());
-        if (bridgeHandlerDisposalOngoing) { // Checks if bridgeHandler is going to disposed (by stopping the binding or
+        if (bridgeHandlerDisposalOngoing) {
+            // Checks if bridgeHandler is going to disposed (by stopping the binding or
             // openHAB for example) and prevents it from being updated which stops the
             // disposal process.
+            return;
         } else if (childHandler instanceof HeosPlayerHandler) {
             String channelIdentifier = "P" + childThing.getUID().getId();
             updateThingChannels(channelManager.removeSingleChannel(channelIdentifier));
-        } else if (childHandler instanceof HeosGroupHandler) {
+        } else if (childHandler instanceof HeosGroupHandler groupHandler) {
             String channelIdentifier = "G" + childThing.getUID().getId();
             updateThingChannels(channelManager.removeSingleChannel(channelIdentifier));
             // removes the handler from the groupMemberMap that handler is no longer called
             // if group is getting online
-            removeGroupHandlerInformation((HeosGroupHandler) childHandler);
+            removeGroupHandlerInformation(groupHandler);
         }
     }
 
@@ -327,7 +314,6 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
     /**
      * Sets the HEOS Thing offline
      */
-    @SuppressWarnings("null")
     public void setGroupOffline(String groupMemberHash) {
         HeosGroupHandler groupHandler = groupHandlerMap.get(groupMemberHash);
         if (groupHandler != null) {
@@ -359,29 +345,27 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
         try {
             String channelIdentifier = "";
             String pid = "";
-            @Nullable
             ThingHandler handler = childThing.getHandler();
-            if (handler instanceof HeosPlayerHandler) {
+            if (handler instanceof HeosPlayerHandler playerHandler) {
                 channelIdentifier = "P" + childThing.getUID().getId();
-                pid = ((HeosPlayerHandler) handler).getId();
-            } else if (handler instanceof HeosGroupHandler) {
+                pid = playerHandler.getId();
+            } else if (handler instanceof HeosGroupHandler groupHandler) {
                 channelIdentifier = "G" + childThing.getUID().getId();
                 if (groupId == null) {
-                    pid = ((HeosGroupHandler) handler).getId();
+                    pid = groupHandler.getId();
                 } else {
                     pid = groupId;
                 }
             }
             Map<String, String> properties = new HashMap<>();
-            @Nullable
             String playerName = childThing.getLabel();
             playerName = playerName == null ? pid : playerName;
             ChannelUID channelUID = new ChannelUID(getThing().getUID(), channelIdentifier);
             properties.put(PROP_NAME, playerName);
             properties.put(PID, pid);
 
-            Channel channel = ChannelBuilder.create(channelUID, "Switch").withLabel(playerName).withType(CH_TYPE_PLAYER)
-                    .withProperties(properties).build();
+            Channel channel = ChannelBuilder.create(channelUID, CoreItemFactory.SWITCH).withLabel(playerName)
+                    .withType(CH_TYPE_PLAYER).withProperties(properties).build();
             updateThingChannels(channelManager.addSingleChannel(channel));
         } catch (HeosNotFoundException e) {
             logger.debug("Group is not yet initialized fully");
@@ -445,7 +429,6 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
 
     public Player[] getPlayers() throws IOException, ReadException {
         HeosResponseObject<Player[]> response = getApiConnection().getPlayers();
-        @Nullable
         Player[] players = response.payload;
         if (players == null) {
             throw new IOException("Received no valid payload");
@@ -455,7 +438,6 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
 
     public Group[] getGroups() throws IOException, ReadException {
         HeosResponseObject<Group[]> response = getApiConnection().getGroups();
-        @Nullable
         Group[] groups = response.payload;
         if (groups == null) {
             throw new IOException("Received no valid payload");
@@ -503,13 +485,11 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
     }
 
     public boolean isBridgeConnected() {
-        @Nullable
         HeosFacade connection = apiConnection;
         return connection != null && connection.isConnected();
     }
 
     public HeosFacade getApiConnection() throws HeosNotConnectedException {
-        @Nullable
         HeosFacade localApiConnection = apiConnection;
         if (localApiConnection != null) {
             return localApiConnection;
@@ -520,7 +500,7 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(HeosActions.class);
+        return List.of(HeosActions.class);
     }
 
     public void registerMediaEventListener(HeosMediaEventListener heosMediaEventListener) {
