@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,27 +14,26 @@ package org.openhab.binding.homematic.internal.discovery;
 
 import static org.openhab.binding.homematic.internal.HomematicBindingConstants.BINDING_ID;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
+import java.util.concurrent.ScheduledExecutorService;
 
-import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.eclipse.jdt.annotation.Nullable;
+import org.eclipse.jdt.annotation.NonNull;
 import org.openhab.binding.homematic.internal.common.HomematicConfig;
 import org.openhab.binding.homematic.internal.communicator.HomematicGateway;
 import org.openhab.binding.homematic.internal.handler.HomematicBridgeHandler;
 import org.openhab.binding.homematic.internal.model.HmDevice;
 import org.openhab.binding.homematic.internal.type.UidUtils;
-import org.openhab.core.config.discovery.AbstractDiscoveryService;
+import org.openhab.core.config.discovery.AbstractThingHandlerDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResult;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
-import org.openhab.core.config.discovery.DiscoveryService;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.ThingUID;
-import org.openhab.core.thing.binding.ThingHandler;
-import org.openhab.core.thing.binding.ThingHandlerService;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ServiceScope;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -43,44 +42,29 @@ import org.slf4j.LoggerFactory;
  *
  * @author Gerhard Riegler - Initial contribution
  */
-public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
-        implements DiscoveryService, ThingHandlerService {
+@Component(scope = ServiceScope.PROTOTYPE, service = HomematicDeviceDiscoveryService.class)
+public class HomematicDeviceDiscoveryService
+        extends AbstractThingHandlerDiscoveryService<@NonNull HomematicBridgeHandler> {
     private final Logger logger = LoggerFactory.getLogger(HomematicDeviceDiscoveryService.class);
     private static final int DISCOVER_TIMEOUT_SECONDS = 300;
-
-    private @NonNullByDefault({}) HomematicBridgeHandler bridgeHandler;
-    private Future<?> loadDevicesFuture;
+    private static final int MINIMAL_SCAN_TIMEOUT_SECONDS = 120;
+    private volatile Future<?> loadDevicesFuture;
     private volatile boolean isInInstallMode = false;
     private volatile Object installModeSync = new Object();
 
     public HomematicDeviceDiscoveryService() {
-        super(Collections.singleton(new ThingTypeUID(BINDING_ID, "-")), DISCOVER_TIMEOUT_SECONDS, false);
+        super(HomematicBridgeHandler.class, Set.of(new ThingTypeUID(BINDING_ID, "-")), DISCOVER_TIMEOUT_SECONDS, false);
+    }
+
+    HomematicDeviceDiscoveryService(ScheduledExecutorService scheduler) {
+        super(scheduler, HomematicBridgeHandler.class, Set.of(new ThingTypeUID(BINDING_ID, "-")),
+                DISCOVER_TIMEOUT_SECONDS, false, null, null);
     }
 
     @Override
-    public void setThingHandler(@Nullable ThingHandler handler) {
-        if (handler instanceof HomematicBridgeHandler) {
-            this.bridgeHandler = (HomematicBridgeHandler) handler;
-            this.bridgeHandler.setDiscoveryService(this);
-        }
-    }
-
-    @Override
-    public @Nullable ThingHandler getThingHandler() {
-        return bridgeHandler;
-    }
-
-    /**
-     * Called on component activation.
-     */
-    @Override
-    public void activate() {
-        super.activate(null);
-    }
-
-    @Override
-    public void deactivate() {
-        super.deactivate();
+    public void initialize() {
+        thingHandler.setDiscoveryService(this);
+        super.initialize();
     }
 
     @Override
@@ -96,14 +80,11 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
      */
     private void enableInstallMode() {
         try {
-            HomematicGateway gateway = bridgeHandler.getGateway();
-            ThingStatus bridgeStatus = null;
+            HomematicGateway gateway = thingHandler.getGateway();
+            Thing bridge = thingHandler.getThing();
+            ThingStatus bridgeStatus = bridge.getStatus();
 
-            if (bridgeHandler != null) {
-                Thing bridge = bridgeHandler.getThing();
-                bridgeStatus = bridge.getStatus();
-            }
-            if (ThingStatus.ONLINE == bridgeStatus) {
+            if (ThingStatus.ONLINE == bridgeStatus && gateway != null) {
                 gateway.setInstallMode(true, getInstallModeDuration());
 
                 int remaining = gateway.getInstallMode();
@@ -122,23 +103,21 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
     }
 
     private int getInstallModeDuration() {
-        if (bridgeHandler != null) {
-            return bridgeHandler.getThing().getConfiguration().as(HomematicConfig.class).getInstallModeDuration();
-        }
-        return HomematicConfig.DEFAULT_INSTALL_MODE_DURATION;
+        return thingHandler.getThing().getConfiguration().as(HomematicConfig.class).getInstallModeDuration();
     }
 
     @Override
     public int getScanTimeout() {
-        return getInstallModeDuration();
+        return Math.max(MINIMAL_SCAN_TIMEOUT_SECONDS, getInstallModeDuration());
     }
 
     @Override
     public synchronized void stopScan() {
         logger.debug("Stopping Homematic discovery scan");
-        if (bridgeHandler != null && bridgeHandler.getGateway() != null) {
-            disableInstallMode();
-            bridgeHandler.getGateway().cancelLoadAllDeviceMetadata();
+        disableInstallMode();
+        final HomematicGateway gateway = thingHandler.getGateway();
+        if (gateway != null) {
+            gateway.cancelLoadAllDeviceMetadata();
         }
         waitForScanFinishing();
         super.stopScan();
@@ -147,13 +126,13 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
     private void disableInstallMode() {
         try {
             synchronized (installModeSync) {
-                if (isInInstallMode) {
+                final HomematicGateway gateway = thingHandler.getGateway();
+                if (isInInstallMode && gateway != null) {
                     isInInstallMode = false;
                     installModeSync.notify();
-                    bridgeHandler.getGateway().setInstallMode(false, 0);
+                    gateway.setInstallMode(false, 0);
                 }
             }
-
         } catch (Exception ex) {
             logger.warn("Failed to disable Homematic controller's install mode", ex);
         }
@@ -174,8 +153,9 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
     }
 
     private void waitForLoadDevicesFinished() throws InterruptedException, ExecutionException {
-        if (loadDevicesFuture != null) {
-            loadDevicesFuture.get();
+        Future<?> loadFuture;
+        if ((loadFuture = loadDevicesFuture) != null) {
+            loadFuture.get();
         }
     }
 
@@ -192,9 +172,9 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
         } catch (Exception ex) {
             logger.error("Error waiting for device discovery scan: {}", ex.getMessage(), ex);
         }
-        String gatewayId = bridgeHandler != null && bridgeHandler.getGateway() != null
-                ? bridgeHandler.getGateway().getId()
-                : "UNKNOWN";
+        HomematicBridgeHandler bridgeHandler = thingHandler;
+        HomematicGateway gateway = bridgeHandler.getGateway();
+        String gatewayId = gateway != null ? gateway.getId() : "UNKNOWN";
         logger.debug("Finished Homematic device discovery scan on gateway '{}'", gatewayId);
     }
 
@@ -202,17 +182,17 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
      * Starts a thread which loads all Homematic devices connected to the gateway.
      */
     public void loadDevices() {
-        if (loadDevicesFuture == null && bridgeHandler.getGateway() != null) {
+        final HomematicGateway gateway = thingHandler.getGateway();
+        if (loadDevicesFuture == null && gateway != null) {
             loadDevicesFuture = scheduler.submit(() -> {
                 try {
-                    final HomematicGateway gateway = bridgeHandler.getGateway();
                     gateway.loadAllDeviceMetadata();
-                    bridgeHandler.getTypeGenerator().validateFirmwares();
+                    thingHandler.getTypeGenerator().validateFirmwares();
                 } catch (Throwable ex) {
                     logger.error("{}", ex.getMessage(), ex);
                 } finally {
                     loadDevicesFuture = null;
-                    bridgeHandler.setOfflineStatus();
+                    thingHandler.setOfflineStatus();
                     removeOlderResults(getTimestampOfLastScan());
                 }
             });
@@ -225,7 +205,7 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
      * Removes the Homematic device.
      */
     public void deviceRemoved(HmDevice device) {
-        ThingUID thingUID = UidUtils.generateThingUID(device, bridgeHandler.getThing());
+        ThingUID thingUID = UidUtils.generateThingUID(device, thingHandler.getThing());
         thingRemoved(thingUID);
     }
 
@@ -233,12 +213,11 @@ public class HomematicDeviceDiscoveryService extends AbstractDiscoveryService
      * Generates the DiscoveryResult from a Homematic device.
      */
     public void deviceDiscovered(HmDevice device) {
-        ThingUID bridgeUID = bridgeHandler.getThing().getUID();
+        ThingUID bridgeUID = thingHandler.getThing().getUID();
         ThingTypeUID typeUid = UidUtils.generateThingTypeUID(device);
         ThingUID thingUID = new ThingUID(typeUid, bridgeUID, device.getAddress());
         String label = device.getName() != null ? device.getName() : device.getAddress();
-        long timeToLive = bridgeHandler.getThing().getConfiguration().as(HomematicConfig.class)
-                .getDiscoveryTimeToLive();
+        long timeToLive = thingHandler.getThing().getConfiguration().as(HomematicConfig.class).getDiscoveryTimeToLive();
 
         DiscoveryResult discoveryResult = DiscoveryResultBuilder.create(thingUID).withBridge(bridgeUID).withLabel(label)
                 .withProperty(Thing.PROPERTY_SERIAL_NUMBER, device.getAddress())
