@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -21,6 +21,8 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -135,7 +137,7 @@ public class LGWebOSHandler extends BaseThingHandler
             return;
         }
 
-        LGWebOSTVSocket s = new LGWebOSTVSocket(webSocketClient, this, host, c.getPort(), scheduler);
+        LGWebOSTVSocket s = new LGWebOSTVSocket(webSocketClient, this, host, c.getUseTLS(), scheduler);
         s.setListener(this);
         socket = s;
 
@@ -190,19 +192,18 @@ public class LGWebOSHandler extends BaseThingHandler
 
             // it is irrelevant which service is queried. Only need to send some packets over the wire
 
-            keepAliveJob = scheduler
-                    .scheduleWithFixedDelay(() -> getSocket().getRunningApp(new ResponseListener<AppInfo>() {
+            keepAliveJob = scheduler.scheduleWithFixedDelay(() -> getSocket().getRunningApp(new ResponseListener<>() {
 
-                        @Override
-                        public void onSuccess(AppInfo responseObject) {
-                            // ignore - actual response is not relevant here
-                        }
+                @Override
+                public void onSuccess(AppInfo responseObject) {
+                    // ignore - actual response is not relevant here
+                }
 
-                        @Override
-                        public void onError(String message) {
-                            // ignore
-                        }
-                    }), keepAliveInterval, keepAliveInterval, TimeUnit.MILLISECONDS);
+                @Override
+                public void onError(String message) {
+                    // ignore
+                }
+            }), keepAliveInterval, keepAliveInterval, TimeUnit.MILLISECONDS);
 
         }
     }
@@ -249,6 +250,11 @@ public class LGWebOSHandler extends BaseThingHandler
     @Override
     public String getKey() {
         return getLGWebOSConfig().getKey();
+    }
+
+    @Override
+    public String getBroadcastAddress() {
+        return getLGWebOSConfig().getBroadcastAddress();
     }
 
     @Override
@@ -357,7 +363,8 @@ public class LGWebOSHandler extends BaseThingHandler
         if (job == null || job.isCancelled()) {
             logger.debug("Schedule channel subscription job");
             channelSubscriptionJob = scheduler.schedule(
-                    () -> channelHandlers.get(CHANNEL_CHANNEL).refreshSubscription(CHANNEL_CHANNEL, this),
+                    () -> Objects.requireNonNull(channelHandlers.get(CHANNEL_CHANNEL))
+                            .refreshSubscription(CHANNEL_CHANNEL, this),
                     CHANNEL_SUBSCRIPTION_DELAY_SECONDS, TimeUnit.SECONDS);
         }
     }
@@ -373,7 +380,7 @@ public class LGWebOSHandler extends BaseThingHandler
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(LGWebOSActions.class);
+        return Set.of(LGWebOSActions.class);
     }
 
     /**
@@ -405,6 +412,7 @@ public class LGWebOSHandler extends BaseThingHandler
     }
 
     public List<String> reportChannels() {
-        return ((TVControlChannel) channelHandlers.get(CHANNEL_CHANNEL)).reportChannels(getThing().getUID());
+        return ((TVControlChannel) Objects.requireNonNull(channelHandlers.get(CHANNEL_CHANNEL)))
+                .reportChannels(getThing().getUID());
     }
 }
