@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,7 +17,6 @@ import java.net.CookieStore;
 import java.net.HttpCookie;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
@@ -131,7 +130,7 @@ public class MiCloudConnector {
     }
 
     private String getApiUrl(String country) {
-        return "https://" + (country.trim().equalsIgnoreCase("cn") ? "" : country.trim().toLowerCase() + ".")
+        return "https://" + ("cn".equalsIgnoreCase(country.trim()) ? "" : country.trim().toLowerCase() + ".")
                 + "api.io.mi.com/app";
     }
 
@@ -149,7 +148,7 @@ public class MiCloudConnector {
 
     public String getMapUrl(String vacuumMap, String country) throws MiCloudException {
         String url = getApiUrl(country) + "/home/getmapfileurl";
-        Map<String, String> map = new HashMap<String, String>();
+        Map<String, String> map = new HashMap<>();
         map.put("data", "{\"obj_name\":\"" + vacuumMap + "\"}");
         String mapResponse = request(url, map);
         logger.trace("Response: {}", mapResponse);
@@ -180,8 +179,7 @@ public class MiCloudConnector {
     }
 
     public String getDeviceStatus(String device, String country) throws MiCloudException {
-        final String response = request("/home/device_list", country, "{\"dids\":[\"" + device + "\"]}");
-        return response;
+        return request("/home/device_list", country, "{\"dids\":[\"" + device + "\"]}");
     }
 
     public String sendRPCCommand(String device, String country, String command) throws MiCloudException {
@@ -199,8 +197,26 @@ public class MiCloudConnector {
             logger.debug("{}", err);
             throw new MiCloudException(err, e);
         }
-        final String response = request("/home/rpc/" + id, country, command);
-        return response;
+        return request("/home/rpc/" + id, country, command);
+    }
+
+    public JsonObject getHomeList(String country) {
+        String response = "";
+        try {
+            response = request("/homeroom/gethome", country,
+                    "{\"fg\":false,\"fetch_share\":true,\"fetch_share_dev\":true,\"limit\":300,\"app_ver\":7,\"fetch_cariot\":true}");
+            logger.trace("gethome response: {}", response);
+            final JsonElement resp = JsonParser.parseString(response);
+            if (resp.isJsonObject() && resp.getAsJsonObject().has("result")) {
+                return resp.getAsJsonObject().get("result").getAsJsonObject();
+            }
+        } catch (JsonParseException e) {
+            logger.info("{} error while parsing rooms: '{}'", e.getMessage(), response);
+        } catch (MiCloudException e) {
+            logger.info("{}", e.getMessage());
+            loginFailedCounter++;
+        }
+        return new JsonObject();
     }
 
     public List<CloudDeviceDTO> getDevices(String country) {
@@ -249,7 +265,7 @@ public class MiCloudConnector {
     }
 
     public String request(String urlPart, String country, String params) throws MiCloudException {
-        Map<String, String> map = new HashMap<String, String>();
+        Map<String, String> map = new HashMap<>();
         map.put("data", params);
         return request(urlPart, country, map);
     }
@@ -411,8 +427,9 @@ public class MiCloudConnector {
         logger.trace("Xiaomi Login step 1 response = {}", responseStep1);
         try {
             JsonElement resp = JsonParser.parseString(parseJson(content));
-            if (resp.isJsonObject() && resp.getAsJsonObject().has("_sign")) {
-                String sign = resp.getAsJsonObject().get("_sign").getAsString();
+            CloudLogin1DTO jsonResp = GSON.fromJson(resp, CloudLogin1DTO.class);
+            final String sign = jsonResp != null ? jsonResp.getSign() : null;
+            if (sign != null && !sign.isBlank()) {
                 logger.trace("Xiaomi Login step 1 sign = {}", sign);
                 return sign;
             } else {
@@ -472,6 +489,19 @@ public class MiCloudConnector {
         logger.trace("Xiaomi login passToken = {}", passToken);
         logger.trace("Xiaomi login location = {}", location);
         logger.trace("Xiaomi login code = {}", code);
+        if (0 != jsonResp.getSecurityStatus()) {
+            logger.debug("Xiaomi Cloud Step2 response: {}", parseJson(content2));
+            logger.debug(
+                    """
+                            Xiaomi Login code: {}
+                            SecurityStatus: {}
+                            Pwd code: {}
+                            Location logon URL: {}
+                            In case of login issues check userId/password details are correct.
+                            If login details are correct, try to logon using browser from the openHAB ip using the browser. Alternatively try to complete logon with above URL.\
+                            """,
+                    jsonResp.getCode(), jsonResp.getSecurityStatus(), jsonResp.getPwd(), jsonResp.getLocation());
+        }
         if (logger.isTraceEnabled()) {
             dumpCookies(url, false);
         }
@@ -486,7 +516,7 @@ public class MiCloudConnector {
             throws MalformedURLException, InterruptedException, TimeoutException, ExecutionException {
         final ContentResponse responseStep3;
         Request request;
-        logger.trace("Xiaomi Login step 3 @ {}", (new URL(location)).getHost());
+        logger.trace("Xiaomi Login step 3 @ {}", (URI.create(location).toURL()).getHost());
         request = httpClient.newRequest(location).timeout(REQUEST_TIMEOUT_SECONDS, TimeUnit.SECONDS);
         request.agent(USERAGENT);
         request.header(HttpHeader.CONTENT_TYPE, "application/x-www-form-urlencoded");
@@ -535,7 +565,7 @@ public class MiCloudConnector {
             logger.trace("Cookie :{} --> {}", cookie.getName(), cookie.getValue());
             if (cookie.getName().contentEquals("serviceToken")) {
                 serviceToken = cookie.getValue();
-                logger.debug("Xiaomi cloud logon succesfull.");
+                logger.debug("Xiaomi cloud logon successful.");
                 logger.trace("Xiaomi cloud servicetoken: {}", serviceToken);
             }
         }
