@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,14 +19,12 @@ import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 import java.io.IOException;
-import java.net.UnknownHostException;
-import java.util.Collections;
-import java.util.Optional;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.TimeUnit;
+import java.time.Duration;
+import java.util.Set;
 import java.util.function.Consumer;
 
-import org.junit.jupiter.api.AfterEach;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -35,12 +33,11 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-import org.openhab.binding.network.internal.toberemoved.cache.ExpiringCacheAsync;
-import org.openhab.binding.network.internal.toberemoved.cache.ExpiringCacheHelper;
 import org.openhab.binding.network.internal.utils.NetworkUtils;
 import org.openhab.binding.network.internal.utils.NetworkUtils.ArpPingUtilEnum;
 import org.openhab.binding.network.internal.utils.NetworkUtils.IpPingMethodEnum;
 import org.openhab.binding.network.internal.utils.PingResult;
+import org.openhab.core.util.SameThreadExecutorService;
 
 /**
  * Tests cases for {@see PresenceDetectionValue}
@@ -49,160 +46,139 @@ import org.openhab.binding.network.internal.utils.PingResult;
  */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
+@NonNullByDefault
 public class PresenceDetectionTest {
-    private static final long CACHETIME = 2000L;
 
-    private PresenceDetection subject;
+    private @NonNullByDefault({}) PresenceDetection subject;
+    private @NonNullByDefault({}) PresenceDetection asyncSubject;
 
-    private @Mock Consumer<PresenceDetectionValue> callback;
-    private @Mock ExecutorService executorService;
-    private @Mock PresenceDetectionListener listener;
-    private @Mock NetworkUtils networkUtils;
+    private @Mock @NonNullByDefault({}) Consumer<PresenceDetectionValue> callback;
+    private @Mock @NonNullByDefault({}) PresenceDetectionListener listener;
+    private @Mock @NonNullByDefault({}) NetworkUtils networkUtils;
 
     @BeforeEach
-    public void setUp() throws UnknownHostException {
+    public void setUp() {
         // Mock an interface
-        when(networkUtils.getInterfaceNames()).thenReturn(Collections.singleton("TESTinterface"));
-        doReturn(ArpPingUtilEnum.IPUTILS_ARPING).when(networkUtils).determineNativeARPpingMethod(anyString());
+        when(networkUtils.getInterfaceNames()).thenReturn(Set.of("TESTinterface"));
+        doReturn(ArpPingUtilEnum.IPUTILS_ARPING).when(networkUtils).determineNativeArpPingMethod(anyString());
         doReturn(IpPingMethodEnum.WINDOWS_PING).when(networkUtils).determinePingMethod();
 
-        subject = spy(new PresenceDetection(listener, (int) CACHETIME));
+        // Inject a direct executor so async tasks run synchronously in tests
+        subject = spy(new PresenceDetection(listener, Duration.ofSeconds(2), Runnable::run));
         subject.networkUtils = networkUtils;
-        subject.cache = spy(new ExpiringCacheAsync<>(CACHETIME, () -> {
-            subject.performPresenceDetection(false);
-        }));
 
         // Set a useful configuration. The default presenceDetection is a no-op.
         subject.setHostname("127.0.0.1");
-        subject.setTimeout(300);
+        subject.setTimeout(Duration.ofMillis(300));
         subject.setUseDhcpSniffing(false);
         subject.setIOSDevice(true);
-        subject.setServicePorts(Collections.singleton(1010));
+        subject.setServicePorts(Set.of(1010));
         subject.setUseArpPing(true, "arping", ArpPingUtilEnum.IPUTILS_ARPING);
         subject.setUseIcmpPing(true);
+
+        asyncSubject = spy(new PresenceDetection(listener, Duration.ofSeconds(2), new SameThreadExecutorService()));
+
+        asyncSubject.networkUtils = networkUtils;
+        asyncSubject.setHostname("127.0.0.1");
+        asyncSubject.setTimeout(Duration.ofMillis(300));
+        asyncSubject.setUseDhcpSniffing(false);
+        asyncSubject.setIOSDevice(true);
+        asyncSubject.setServicePorts(Set.of(1010));
+        asyncSubject.setUseArpPing(true, "arping", ArpPingUtilEnum.IPUTILS_ARPING);
+        asyncSubject.setUseIcmpPing(true);
 
         assertThat(subject.pingMethod, is(IpPingMethodEnum.WINDOWS_PING));
     }
 
-    @AfterEach
-    public void shutDown() {
-        subject.waitForPresenceDetection();
-    }
-
-    // Depending on the amount of test methods an according amount of threads is spawned.
-    // We will check if they spawn and return in time.
+    // Depending on the amount of test methods an according amount of threads is used.
     @Test
-    public void threadCountTest() {
-        assertNull(subject.executorService);
+    public void usedThreadCountTest() {
+        // Custom executor to count submitted tasks
+        class CountingExecutor implements java.util.concurrent.Executor {
+            int count = 0;
 
-        doNothing().when(subject).performARPping(any());
-        doNothing().when(subject).performJavaPing();
-        doNothing().when(subject).performSystemPing();
-        doNothing().when(subject).performServicePing(anyInt());
+            @Override
+            public void execute(@Nullable Runnable command) {
+                count++;
+                if (command != null) {
+                    command.run();
+                }
+            }
+        }
+        CountingExecutor countingExecutor = new CountingExecutor();
 
-        subject.performPresenceDetection(false);
+        // Create a new subject with the counting executor
+        subject = spy(new PresenceDetection(listener, Duration.ofSeconds(2), countingExecutor));
+        subject.networkUtils = networkUtils;
+        subject.setHostname("127.0.0.1");
+        subject.setTimeout(Duration.ofMillis(300));
+        subject.setUseDhcpSniffing(false);
+        subject.setIOSDevice(true);
+        subject.setServicePorts(Set.of(1010));
+        subject.setUseArpPing(true, "arping", ArpPingUtilEnum.IPUTILS_ARPING);
+        subject.setUseIcmpPing(true);
 
-        // Thread count: ARP + ICMP + 1*TCP
-        assertThat(subject.detectionChecks, is(3));
-        assertNotNull(subject.executorService);
+        doNothing().when(subject).performArpPing(any(), any());
+        doNothing().when(subject).performJavaPing(any());
+        doNothing().when(subject).performSystemPing(any());
+        doNothing().when(subject).performServicePing(any(), anyInt());
 
-        subject.waitForPresenceDetection();
-        assertThat(subject.detectionChecks, is(0));
-        assertNull(subject.executorService);
+        subject.getValue(callback -> {
+            // No-op callback
+        });
+
+        // Thread count: ARP + ICMP + 1*TCP + task completion watcher = 4
+        assertThat(countingExecutor.count, is(4));
     }
 
     @Test
     public void partialAndFinalCallbackTests() throws InterruptedException, IOException {
-        doReturn(Optional.of(new PingResult(true, 10))).when(networkUtils).nativePing(eq(IpPingMethodEnum.WINDOWS_PING),
-                anyString(), anyInt());
-        doReturn(Optional.of(new PingResult(true, 10))).when(networkUtils)
-                .nativeARPPing(eq(ArpPingUtilEnum.IPUTILS_ARPING), anyString(), anyString(), any(), anyInt());
-        doReturn(Optional.of(new PingResult(true, 10))).when(networkUtils).servicePing(anyString(), anyInt(), anyInt());
+        PingResult pingResult = new PingResult(true, Duration.ofMillis(10));
+        doReturn(pingResult).when(networkUtils).nativePing(eq(IpPingMethodEnum.WINDOWS_PING), anyString(), any());
+        doReturn(pingResult).when(networkUtils).nativeArpPing(eq(ArpPingUtilEnum.IPUTILS_ARPING), anyString(),
+                anyString(), any(), any());
+        doReturn(pingResult).when(networkUtils).servicePing(anyString(), anyInt(), any());
 
-        assertTrue(subject.performPresenceDetection(false));
-        subject.waitForPresenceDetection();
+        subject.performPresenceDetection();
 
-        verify(subject, times(0)).performJavaPing();
-        verify(subject).performSystemPing();
-        verify(subject).performARPping(any());
-        verify(subject).performServicePing(anyInt());
+        assertThat(subject.detectionChecks, is(3));
+
+        // All detection methods should be called (direct executor runs synchronously)
+        verify(subject, times(0)).performJavaPing(any());
+        verify(subject).performSystemPing(any());
+        verify(subject).performArpPing(any(), any());
+        verify(subject).performServicePing(any(), anyInt());
 
         verify(listener, times(3)).partialDetectionResult(any());
-        ArgumentCaptor<PresenceDetectionValue> capture = ArgumentCaptor.forClass(PresenceDetectionValue.class);
-        verify(listener, times(1)).finalDetectionResult(capture.capture());
+        ArgumentCaptor<PresenceDetectionValue> pdvCapture = ArgumentCaptor.forClass(PresenceDetectionValue.class);
+        verify(listener, times(1)).finalDetectionResult(pdvCapture.capture());
 
-        assertThat(capture.getValue().getSuccessfulDetectionTypes(), is("ARP_PING, ICMP_PING, TCP_CONNECTION"));
+        assertThat(pdvCapture.getValue().getSuccessfulDetectionTypes(), is("ARP_PING, ICMP_PING, TCP_CONNECTION"));
     }
 
     @Test
     public void cacheTest() throws InterruptedException, IOException {
-        doReturn(Optional.of(new PingResult(true, 10))).when(networkUtils).nativePing(eq(IpPingMethodEnum.WINDOWS_PING),
-                anyString(), anyInt());
-        doReturn(Optional.of(new PingResult(true, 10))).when(networkUtils)
-                .nativeARPPing(eq(ArpPingUtilEnum.IPUTILS_ARPING), anyString(), anyString(), any(), anyInt());
-        doReturn(Optional.of(new PingResult(true, 10))).when(networkUtils).servicePing(anyString(), anyInt(), anyInt());
-
-        doReturn(executorService).when(subject).getThreadsFor(anyInt());
+        PingResult pingResult = new PingResult(true, Duration.ofMillis(10));
+        doReturn(pingResult).when(networkUtils).nativePing(eq(IpPingMethodEnum.WINDOWS_PING), anyString(), any());
+        doReturn(pingResult).when(networkUtils).nativeArpPing(eq(ArpPingUtilEnum.IPUTILS_ARPING), anyString(),
+                anyString(), any(), any());
+        doReturn(pingResult).when(networkUtils).servicePing(anyString(), anyInt(), any());
 
         // We expect no valid value
-        assertTrue(subject.cache.isExpired());
+        assertTrue(asyncSubject.cache.isExpired());
         // Get value will issue a PresenceDetection internally.
-        subject.getValue(callback);
-        verify(subject).performPresenceDetection(eq(false));
-        assertNotNull(subject.executorService);
-        // There should be no straight callback yet
-        verify(callback, times(0)).accept(any());
-
-        // Perform the different presence detection threads now
-        ArgumentCaptor<Runnable> capture = ArgumentCaptor.forClass(Runnable.class);
-        verify(executorService, times(3)).execute(capture.capture());
-        for (Runnable r : capture.getAllValues()) {
-            r.run();
-        }
-        // "Wait" for the presence detection to finish
-        subject.waitForPresenceDetection();
-
-        // Although there are multiple partial results and a final result,
-        // the getValue() consumers get the fastest response possible, and only once.
+        asyncSubject.getValue(callback);
+        verify(asyncSubject).performPresenceDetection();
+        // Callback should be called once with the result (since we use direct executor)
         verify(callback, times(1)).accept(any());
 
         // As long as the cache is valid, we can get the result back again
-        subject.getValue(callback);
+        asyncSubject.getValue(callback);
         verify(callback, times(2)).accept(any());
 
-        // Invalidate value, we should not get a new callback immediately again
-        subject.cache.invalidateValue();
-        subject.getValue(callback);
-        verify(callback, times(2)).accept(any());
-    }
-
-    @Test
-    public void reuseValueTests() throws InterruptedException, IOException {
-        final long startTime = 1000L;
-        when(subject.cache.getCurrentNanoTime()).thenReturn(TimeUnit.MILLISECONDS.toNanos(startTime));
-
-        // The PresenceDetectionValue.getLowestLatency() should return the smallest latency
-        PresenceDetectionValue v = subject.updateReachableValue(PresenceDetectionType.ICMP_PING, 20);
-        PresenceDetectionValue v2 = subject.updateReachableValue(PresenceDetectionType.ICMP_PING, 19);
-        assertEquals(v, v2);
-        assertThat(v.getLowestLatency(), is(19.0));
-
-        // Advance in time but not expire the cache (1ms left)
-        final long almostExpire = startTime + CACHETIME - 1;
-        when(subject.cache.getCurrentNanoTime()).thenReturn(TimeUnit.MILLISECONDS.toNanos(almostExpire));
-
-        // Updating should reset the expire timer of the cache
-        v2 = subject.updateReachableValue(PresenceDetectionType.ICMP_PING, 28);
-        assertEquals(v, v2);
-        assertThat(v2.getLowestLatency(), is(19.0));
-        assertThat(ExpiringCacheHelper.expireTime(subject.cache),
-                is(TimeUnit.MILLISECONDS.toNanos(almostExpire + CACHETIME)));
-
-        // Cache expire. A new PresenceDetectionValue instance will be returned
-        when(subject.cache.getCurrentNanoTime())
-                .thenReturn(TimeUnit.MILLISECONDS.toNanos(almostExpire + CACHETIME + CACHETIME + 1));
-        v2 = subject.updateReachableValue(PresenceDetectionType.ICMP_PING, 25);
-        assertNotEquals(v, v2);
-        assertThat(v2.getLowestLatency(), is(25.0));
+        // Invalidate value, we should get a new callback immediately
+        asyncSubject.cache.invalidateValue();
+        asyncSubject.getValue(callback);
+        verify(callback, times(3)).accept(any());
     }
 }
