@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,7 @@ package org.openhab.binding.prowl.internal;
 import static org.openhab.binding.prowl.internal.ProwlBindingConstants.*;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -49,7 +49,7 @@ public class ProwlHandler extends BaseThingHandler {
     private final Logger logger = LoggerFactory.getLogger(ProwlHandler.class);
 
     private ProwlConfiguration config = new ProwlConfiguration();
-    final private HttpClient httpClient;
+    private final HttpClient httpClient;
 
     /**
      * Future to poll for status
@@ -113,13 +113,23 @@ public class ProwlHandler extends BaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(ProwlActions.class);
+        return List.of(ProwlActions.class);
     }
 
     public void pushNotification(@Nullable String event, @Nullable String description) {
+        pushNotification(event, description, 0);
+    }
+
+    public void pushNotification(@Nullable String event, @Nullable String description, int priority) {
         if (event == null || description == null) {
             logger.debug("Cannot push message with null event or null description");
             return;
+        }
+
+        if (priority < -2) {
+            priority = -2;
+        } else if (priority > 2) {
+            priority = 2;
         }
 
         logger.debug("Pushing an event: {} with desc: {}", event, description);
@@ -127,7 +137,7 @@ public class ProwlHandler extends BaseThingHandler {
             ContentResponse response = httpClient.POST(PROWL_ADD_URI).timeout(5, TimeUnit.SECONDS)
                     .content(
                             new StringContentProvider("apikey=" + config.apiKey + "&application=" + config.application
-                                    + "&event=" + event + "&description=" + description),
+                                    + "&event=" + event + "&description=" + description + "&priority=" + priority),
                             "application/x-www-form-urlencoded; charset=UTF-8")
                     .send();
             String resp = response.getContentAsString();
