@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,14 +14,12 @@ package org.openhab.binding.radiothermostat.internal.handler;
 
 import static org.openhab.binding.radiothermostat.internal.RadioThermostatBindingConstants.*;
 
-import java.math.BigDecimal;
 import java.text.NumberFormat;
 import java.text.ParseException;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -41,6 +39,7 @@ import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatDTO;
 import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatHumidityDTO;
 import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatRuntimeDTO;
 import org.openhab.binding.radiothermostat.internal.dto.RadioThermostatTstatDTO;
+import org.openhab.binding.radiothermostat.internal.util.RadioThermostatSchedule;
 import org.openhab.core.library.types.DateTimeType;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.OnOffType;
@@ -84,6 +83,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     private final Gson gson;
     private final RadioThermostatConnector connector;
     private final RadioThermostatDTO rthermData = new RadioThermostatDTO();
+    private @Nullable RadioThermostatSchedule thermostatSchedule;
 
     private @Nullable ScheduledFuture<?> refreshJob;
     private @Nullable ScheduledFuture<?> logRefreshJob;
@@ -94,7 +94,10 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     private boolean isCT80 = false;
     private boolean disableLogs = false;
     private boolean clockSync = false;
+    private boolean remoteTempDeadband = false;
     private String setpointCmdKeyPrefix = "t_";
+    private String heatProgramJson = BLANK;
+    private String coolProgramJson = BLANK;
 
     public RadioThermostatHandler(Thing thing, RadioThermostatStateDescriptionProvider stateDescriptionProvider,
             HttpClient httpClient) {
@@ -115,10 +118,11 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         this.isCT80 = config.isCT80;
         this.disableLogs = config.disableLogs;
         this.clockSync = config.clockSync;
+        this.remoteTempDeadband = config.remoteTempDeadband;
 
-        if (hostName == null || "".equals(hostName)) {
+        if (hostName == null || hostName.isBlank()) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
-                    "Thermostat Host Name must be specified");
+                    "@text/offline.configuration-error-hostname");
             return;
         }
 
@@ -135,7 +139,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
 
         // The setpoint mode is controlled by the name of setpoint attribute sent to the thermostat.
         // Temporary mode uses setpoint names prefixed with "t_" while absolute mode uses "a_"
-        if (config.setpointMode.equals("absolute")) {
+        if ("absolute".equals(config.setpointMode)) {
             this.setpointCmdKeyPrefix = "a_";
         }
 
@@ -148,6 +152,26 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             channels.removeIf(c -> (c.getUID().getId().equals(HUMIDITY)));
             channels.removeIf(c -> (c.getUID().getId().equals(PROGRAM_MODE)));
             updateThing(editThing().withChannels(channels).build());
+        }
+
+        final RadioThermostatSchedule localSchedule = thermostatSchedule = new RadioThermostatSchedule(config);
+
+        try {
+            heatProgramJson = localSchedule.getHeatProgramJson();
+        } catch (IllegalStateException e) {
+            logger.debug("Invalid HEATING program schedule: {}", e.getMessage());
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
+                    "@text/offline.configuration-error-heating-program");
+            return;
+        }
+
+        try {
+            coolProgramJson = localSchedule.getCoolProgramJson();
+        } catch (IllegalStateException e) {
+            logger.debug("Invalid COOLING program schedule: {}", e.getMessage());
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
+                    "@text/offline.configuration-error-cooling-program");
+            return;
         }
 
         updateStatus(ThingStatus.UNKNOWN);
@@ -165,7 +189,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(RadioThermostatThingActions.class);
+        return List.of(RadioThermostatThingActions.class);
     }
 
     /**
@@ -175,6 +199,22 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         ScheduledFuture<?> refreshJob = this.refreshJob;
         if (refreshJob == null || refreshJob.isCancelled()) {
             Runnable runnable = () -> {
+                // populate the heat and cool programs on the thermostat from the user configuration,
+                // the commands will be sent each time the refresh job runs until a success response is seen
+                if (!heatProgramJson.isEmpty()) {
+                    final String response = connector.sendCommand(null, null, heatProgramJson, HEAT_PROGRAM_RESOURCE);
+                    if (response.contains("success")) {
+                        heatProgramJson = BLANK;
+                    }
+                }
+
+                if (!coolProgramJson.isEmpty()) {
+                    final String response = connector.sendCommand(null, null, coolProgramJson, COOL_PROGRAM_RESOURCE);
+                    if (response.contains("success")) {
+                        coolProgramJson = BLANK;
+                    }
+                }
+
                 // send an async call to the thermostat to get the 'tstat' data
                 connector.getAsyncThermostatData(DEFAULT_RESOURCE);
             };
@@ -191,7 +231,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         ScheduledFuture<?> clockSyncJob = this.clockSyncJob;
         if (clockSyncJob == null || clockSyncJob.isCancelled()) {
             clockSyncJob = null;
-            this.clockSyncJob = scheduler.scheduleWithFixedDelay(this::syncThermostatClock, 1, 60, TimeUnit.MINUTES);
+            this.clockSyncJob = scheduler.schedule(this::syncThermostatClock, 1, TimeUnit.MINUTES);
         }
     }
 
@@ -199,18 +239,27 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
      * Sync the thermostat's clock with the host system clock
      */
     private void syncThermostatClock() {
-        Calendar c = Calendar.getInstance();
+        boolean success = false;
 
-        // The thermostat week starts as Monday = 0, subtract 2 since in standard DoW Monday = 2
-        int thermDayOfWeek = c.get(Calendar.DAY_OF_WEEK) - 2;
-        // Sunday will be -1, so add 7 to make it 6
-        if (thermDayOfWeek < 0) {
-            thermDayOfWeek += 7;
+        // don't sync clock if override is on because it will reset temporary hold
+        final Integer override = rthermData.getThermostatData().getOverride();
+        if (override == null || override.compareTo(0) == 0) {
+            Calendar c = Calendar.getInstance();
+
+            // The thermostat week starts as Monday = 0, subtract 2 since in standard DoW Monday = 2
+            int thermDayOfWeek = c.get(Calendar.DAY_OF_WEEK) - 2;
+            // Sunday will be -1, so add 7 to make it 6
+            if (thermDayOfWeek < 0) {
+                thermDayOfWeek += 7;
+            }
+
+            success = connector.sendCommand(null, null,
+                    String.format(JSON_TIME, thermDayOfWeek, c.get(Calendar.HOUR_OF_DAY), c.get(Calendar.MINUTE)),
+                    TIME_RESOURCE).contains("success");
         }
 
-        connector.sendCommand(null, null,
-                String.format(JSON_TIME, thermDayOfWeek, c.get(Calendar.HOUR_OF_DAY), c.get(Calendar.MINUTE)),
-                TIME_RESOURCE);
+        // if sync call was successful run again in one hour, if un-successful try again in one minute
+        this.clockSyncJob = scheduler.schedule(this::syncThermostatClock, (success ? 60 : 1), TimeUnit.MINUTES);
     }
 
     /**
@@ -243,6 +292,22 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         logger.debug("Disposing the RadioThermostat handler.");
         connector.removeEventListener(this);
 
+        // Disable Remote Temp and Message Area on shutdown
+        if (ThingStatus.ONLINE.equals(this.getThing().getStatus())) {
+            final boolean isRemoteTempLinked = isLinked(REMOTE_TEMP);
+            final boolean isMessageLinked = isLinked(MESSAGE);
+
+            scheduler.schedule(() -> {
+                if (isRemoteTempLinked) {
+                    connector.sendCommand("rem_mode", "0", REMOTE_TEMP_RESOURCE);
+                }
+
+                if (isMessageLinked) {
+                    connector.sendCommand("mode", "0", PMA_RESOURCE);
+                }
+            }, 0, TimeUnit.SECONDS);
+        }
+
         ScheduledFuture<?> refreshJob = this.refreshJob;
         if (refreshJob != null) {
             refreshJob.cancel(true);
@@ -266,13 +331,17 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
         connector.sendCommand(null, null, rawCommand, DEFAULT_RESOURCE);
     }
 
+    public void handleRawCommand(@Nullable String rawCommand, String resource) {
+        connector.sendCommand(null, null, rawCommand, resource);
+    }
+
     @Override
     public void handleCommand(ChannelUID channelUID, Command command) {
         if (command instanceof RefreshType) {
             updateChannel(channelUID.getId(), rthermData);
         } else {
             Integer cmdInt = -1;
-            String cmdStr = command.toString();
+            final String cmdStr = command.toString();
             try {
                 // parse out an Integer from the string
                 // ie '70.5 F' becomes 70, also handles negative numbers
@@ -295,6 +364,8 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                         updateChannel(SET_POINT, rthermData);
                         rthermData.getThermostatData().setHold(0);
                         updateChannel(HOLD, rthermData);
+                        updateChannel(NEXT_TEMP, rthermData);
+                        updateChannel(NEXT_TIME, rthermData);
                         rthermData.getThermostatData().setProgramMode(-1);
                         updateChannel(PROGRAM_MODE, rthermData);
 
@@ -319,15 +390,19 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                         rthermData.getThermostatData().setHold(0);
                         connector.sendCommand("hold", "0", DEFAULT_RESOURCE);
                     }
+                    updateChannel(NEXT_TEMP, rthermData);
+                    updateChannel(NEXT_TIME, rthermData);
                     break;
                 case SET_POINT:
-                    String cmdKey = null;
+                    final String cmdKey;
                     if (rthermData.getThermostatData().getMode() == 1) {
                         cmdKey = this.setpointCmdKeyPrefix + "heat";
                         rthermData.getThermostatData().setHeatTarget(Double.valueOf(cmdInt));
+                        rthermData.getThermostatData().setOverride(1);
                     } else if (rthermData.getThermostatData().getMode() == 2) {
                         cmdKey = this.setpointCmdKeyPrefix + "cool";
                         rthermData.getThermostatData().setCoolTarget(Double.valueOf(cmdInt));
+                        rthermData.getThermostatData().setOverride(1);
                     } else {
                         // don't do anything if we are not in heat or cool mode
                         break;
@@ -336,11 +411,21 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                     break;
                 case REMOTE_TEMP:
                     if (cmdInt != -1) {
-                        QuantityType<?> remoteTemp = ((QuantityType<Temperature>) command)
+                        final QuantityType<Temperature> remoteTemp = ((QuantityType<Temperature>) command)
                                 .toUnit(ImperialUnits.FAHRENHEIT);
-                        connector.sendCommand("rem_temp", String.valueOf(remoteTemp.intValue()), REMOTE_TEMP_RESOURCE);
+                        if (remoteTemp != null) {
+                            connector.sendCommand("rem_temp", handleRemoteTempDeadband(remoteTemp),
+                                    REMOTE_TEMP_RESOURCE);
+                        }
                     } else {
                         connector.sendCommand("rem_mode", "0", REMOTE_TEMP_RESOURCE);
+                    }
+                    break;
+                case MESSAGE:
+                    if (!cmdStr.isEmpty()) {
+                        connector.sendCommand(null, null, String.format(JSON_PMA, cmdStr), PMA_RESOURCE);
+                    } else {
+                        connector.sendCommand("mode", "0", PMA_RESOURCE);
                     }
                     break;
                 default:
@@ -358,12 +443,12 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     public void onNewMessageEvent(RadioThermostatEvent event) {
         logger.debug("onNewMessageEvent: key {} = {}", event.getKey(), event.getValue());
 
-        String evtKey = event.getKey();
-        String evtVal = event.getValue();
+        final String evtKey = event.getKey();
+        final String evtVal = event.getValue();
 
         if (KEY_ERROR.equals(evtKey)) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.OFFLINE.COMMUNICATION_ERROR,
-                    "Error retrieving data from Thermostat ");
+                    "@text/offline.communication-error-get-data");
         } else {
             updateStatus(ThingStatus.ONLINE, ThingStatusDetail.NONE);
 
@@ -371,14 +456,18 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             switch (evtKey) {
                 case DEFAULT_RESOURCE:
                     rthermData.setThermostatData(gson.fromJson(evtVal, RadioThermostatTstatDTO.class));
-                    updateAllChannels();
+                    // if thermostat returned -1 for temperature, skip this update
+                    if (rthermData.getThermostatData().getTemperature() >= 0) {
+                        updateAllChannels();
+                    }
                     break;
                 case HUMIDITY_RESOURCE:
-                    RadioThermostatHumidityDTO dto = gson.fromJson(evtVal, RadioThermostatHumidityDTO.class);
-                    if (dto != null) {
+                    final RadioThermostatHumidityDTO dto = gson.fromJson(evtVal, RadioThermostatHumidityDTO.class);
+                    // if thermostat returned -1 for humidity, skip this update
+                    if (dto != null && dto.getHumidity() >= 0) {
                         rthermData.setHumidity(dto.getHumidity());
+                        updateChannel(HUMIDITY, rthermData);
                     }
-                    updateChannel(HUMIDITY, rthermData);
                     break;
                 case RUNTIME_RESOURCE:
                     rthermData.setRuntime(gson.fromJson(evtVal, RadioThermostatRuntimeDTO.class));
@@ -398,9 +487,9 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
      */
     private void updateChannel(String channelId, RadioThermostatDTO rthermData) {
         if (isLinked(channelId)) {
-            Object value;
+            final Object value;
             try {
-                value = getValue(channelId, rthermData);
+                value = getValue(channelId, rthermData, thermostatSchedule);
             } catch (Exception e) {
                 logger.debug("Error setting {} value", channelId.toUpperCase());
                 return;
@@ -409,20 +498,18 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             State state = null;
             if (value == null) {
                 state = UnDefType.UNDEF;
-            } else if (value instanceof PointType) {
-                state = (PointType) value;
-            } else if (value instanceof ZonedDateTime) {
-                state = new DateTimeType((ZonedDateTime) value);
-            } else if (value instanceof QuantityType<?>) {
-                state = (QuantityType<?>) value;
-            } else if (value instanceof BigDecimal) {
-                state = new DecimalType((BigDecimal) value);
-            } else if (value instanceof Integer) {
-                state = new DecimalType(BigDecimal.valueOf(((Integer) value).longValue()));
+            } else if (value instanceof PointType pointCommand) {
+                state = pointCommand;
+            } else if (value instanceof ZonedDateTime zonedDateTimeCommand) {
+                state = new DateTimeType(zonedDateTimeCommand);
+            } else if (value instanceof QuantityType<?> quantityCommand) {
+                state = quantityCommand;
+            } else if (value instanceof Number numberCommand) {
+                state = new DecimalType(numberCommand);
             } else if (value instanceof String) {
                 state = new StringType(value.toString());
-            } else if (value instanceof OnOffType) {
-                state = (OnOffType) value;
+            } else if (value instanceof OnOffType onOffCommand) {
+                state = onOffCommand;
             } else {
                 logger.warn("Update channel {}: Unsupported value type {}", channelId,
                         value.getClass().getSimpleName());
@@ -440,16 +527,16 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
     /**
      * Update a given channelId from the thermostat data
      *
-     * @param the channel id to be updated
+     * @param channelId the channel id to be updated
      * @param data the RadioThermostat dto
      * @return the value to be set in the state
      */
-    public static @Nullable Object getValue(String channelId, RadioThermostatDTO data) {
+    public static @Nullable Object getValue(String channelId, RadioThermostatDTO data,
+            @Nullable RadioThermostatSchedule thermostatSchedule) {
         switch (channelId) {
             case TEMPERATURE:
                 if (data.getThermostatData().getTemperature() != null) {
-                    return new QuantityType<Temperature>(data.getThermostatData().getTemperature(),
-                            API_TEMPERATURE_UNIT);
+                    return new QuantityType<>(data.getThermostatData().getTemperature(), API_TEMPERATURE_UNIT);
                 } else {
                     return null;
                 }
@@ -467,7 +554,7 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
                 return data.getThermostatData().getProgramMode();
             case SET_POINT:
                 if (data.getThermostatData().getSetpoint() != 0) {
-                    return new QuantityType<Temperature>(data.getThermostatData().getSetpoint(), API_TEMPERATURE_UNIT);
+                    return new QuantityType<>(data.getThermostatData().getSetpoint(), API_TEMPERATURE_UNIT);
                 } else {
                     return null;
                 }
@@ -502,6 +589,22 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
             case YESTERDAY_COOL_RUNTIME:
                 return new QuantityType<>(data.getRuntime().getYesterday().getCoolTime().getRuntime(),
                         API_MINUTES_UNIT);
+            case NEXT_TEMP:
+                if (thermostatSchedule != null) {
+                    final Integer nextTemp = thermostatSchedule.getNextTemp(data.getThermostatData());
+                    if (nextTemp != null) {
+                        return new QuantityType<>(nextTemp, API_TEMPERATURE_UNIT);
+                    }
+                }
+                return null;
+            case NEXT_TIME:
+                if (thermostatSchedule != null) {
+                    final ZonedDateTime nextTime = thermostatSchedule.getNextTime(data.getThermostatData());
+                    if (nextTime != null) {
+                        return nextTime;
+                    }
+                }
+                return null;
         }
         return null;
     }
@@ -511,9 +614,11 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
      */
     private void updateAllChannels() {
         // Update all channels from rthermData
-        for (Channel channel : getThing().getChannels()) {
-            updateChannel(channel.getUID().getId(), rthermData);
-        }
+        getThing().getChannels().forEach(channel -> {
+            if (!NO_UPDATE_CHANNEL_IDS.contains(channel.getUID().getId())) {
+                updateChannel(channel.getUID().getId(), rthermData);
+            }
+        });
     }
 
     /**
@@ -522,14 +627,41 @@ public class RadioThermostatHandler extends BaseThingHandler implements RadioThe
      * @return list of state options for thermostat fan modes
      */
     private List<StateOption> getFanModeOptions() {
-        List<StateOption> fanModeOptions = new ArrayList<>();
+        final List<StateOption> fanModeOptions = new ArrayList<>(this.isCT80 ? 3 : 2);
 
-        fanModeOptions.add(new StateOption("0", "Auto"));
+        fanModeOptions.add(new StateOption("0", "@text/options.fan-option-auto"));
         if (this.isCT80) {
-            fanModeOptions.add(new StateOption("1", "Auto/Circulate"));
+            fanModeOptions.add(new StateOption("1", "@text/options.fan-option-circulate"));
         }
-        fanModeOptions.add(new StateOption("2", "On"));
+        fanModeOptions.add(new StateOption("2", "@text/options.fan-option-on"));
 
         return fanModeOptions;
+    }
+
+    private String handleRemoteTempDeadband(QuantityType<Temperature> remoteTemp) {
+        if (!this.remoteTempDeadband) {
+            return String.valueOf(remoteTemp.intValue());
+        }
+
+        final int remoteTempRounded;
+        final boolean isHeatModeOff = Integer.valueOf(1).equals(rthermData.getThermostatData().getMode())
+                && Integer.valueOf(0).equals(rthermData.getThermostatData().getStatus());
+        final boolean isCoolModeOff = Integer.valueOf(2).equals(rthermData.getThermostatData().getMode())
+                && Integer.valueOf(0).equals(rthermData.getThermostatData().getStatus());
+
+        // hvac heating on OR hvac off in cooling mode, round temperature down, e.g. 69.5 = 69
+        if (Integer.valueOf(1).equals(rthermData.getThermostatData().getStatus()) || isCoolModeOff) {
+            remoteTempRounded = (int) Math.floor(remoteTemp.doubleValue());
+            logger.debug("remote temp: {}, rounding down to {}", remoteTemp, remoteTempRounded);
+        } else if (Integer.valueOf(2).equals(rthermData.getThermostatData().getStatus()) || isHeatModeOff) {
+            // hvac cooling on OR hvac off in heat mode, round temperature up, e.g. 69.1 = 70
+            remoteTempRounded = (int) Math.ceil(remoteTemp.doubleValue());
+            logger.debug("remote temp: {}, rounding up to {}", remoteTemp, remoteTempRounded);
+        } else {
+            // hvac mode off (or unknown), round temperature, e.g. 69.5 = 70
+            remoteTempRounded = (int) Math.round(remoteTemp.doubleValue());
+            logger.debug("remote temp: {}, rounding to {}", remoteTemp, remoteTempRounded);
+        }
+        return String.valueOf(remoteTempRounded);
     }
 }
