@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.ZonedDateTime;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -47,13 +46,16 @@ public class SurePetcareConstants {
     public static final ThingTypeUID THING_TYPE_HUB_DEVICE = new ThingTypeUID(BINDING_ID, "hubDevice");
     public static final ThingTypeUID THING_TYPE_FLAP_DEVICE = new ThingTypeUID(BINDING_ID, "flapDevice");
     public static final ThingTypeUID THING_TYPE_FEEDER_DEVICE = new ThingTypeUID(BINDING_ID, "feederDevice");
+    public static final ThingTypeUID THING_TYPE_WATER_DEVICE = new ThingTypeUID(BINDING_ID, "waterDevice");
 
-    public static final Set<ThingTypeUID> BRIDGE_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_BRIDGE);
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = new HashSet<>(Arrays.asList(THING_TYPE_HOUSEHOLD,
-            THING_TYPE_PET, THING_TYPE_HUB_DEVICE, THING_TYPE_FLAP_DEVICE, THING_TYPE_FEEDER_DEVICE));
+    public static final Set<ThingTypeUID> BRIDGE_THING_TYPES_UIDS = Set.of(THING_TYPE_BRIDGE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = new HashSet<>(
+            Arrays.asList(THING_TYPE_HOUSEHOLD, THING_TYPE_PET, THING_TYPE_HUB_DEVICE, THING_TYPE_FLAP_DEVICE,
+                    THING_TYPE_FEEDER_DEVICE, THING_TYPE_WATER_DEVICE));
 
     public static final long DEFAULT_REFRESH_INTERVAL_TOPOLOGY = 36000; // 10 hours
     public static final long DEFAULT_REFRESH_INTERVAL_STATUS = 300; // 5 mins
+    public static final int DEFAULT_HTTP_TIMEOUT = 8;
 
     public static final String PROPERTY_NAME_ID = "id";
 
@@ -122,4 +124,7 @@ public class SurePetcareConstants {
     public static final String PET_CHANNEL_FEEDER_LAST_CHANGE = "feederLastChange";
     public static final String PET_CHANNEL_FEEDER_LAST_CHANGE_LEFT = "feederLastChangeLeft";
     public static final String PET_CHANNEL_FEEDER_LAST_CHANGE_RIGHT = "feederLastChangeRight";
+    public static final String PET_CHANNEL_WATER_DEVICE = "waterDevice";
+    public static final String PET_CHANNEL_WATER_LAST_DRINKING = "waterLastDrinking";
+    public static final String PET_CHANNEL_WATER_LAST_CHANGE = "waterLastChange";
 }
