@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,10 +19,11 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.Base64;
+import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 
@@ -38,18 +39,29 @@ import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpMethod;
 import org.openhab.binding.telegram.internal.TelegramHandler;
 import org.openhab.core.automation.annotation.ActionInput;
+import org.openhab.core.automation.annotation.ActionOutput;
 import org.openhab.core.automation.annotation.RuleAction;
 import org.openhab.core.thing.binding.ThingActions;
 import org.openhab.core.thing.binding.ThingActionsScope;
 import org.openhab.core.thing.binding.ThingHandler;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ServiceScope;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.pengrad.telegrambot.model.request.InlineKeyboardButton;
 import com.pengrad.telegrambot.model.request.InlineKeyboardMarkup;
+import com.pengrad.telegrambot.model.request.InputMedia;
+import com.pengrad.telegrambot.model.request.InputMediaAnimation;
+import com.pengrad.telegrambot.model.request.InputMediaAudio;
+import com.pengrad.telegrambot.model.request.InputMediaDocument;
+import com.pengrad.telegrambot.model.request.InputMediaPhoto;
+import com.pengrad.telegrambot.model.request.InputMediaVideo;
 import com.pengrad.telegrambot.request.AnswerCallbackQuery;
+import com.pengrad.telegrambot.request.DeleteMessage;
 import com.pengrad.telegrambot.request.EditMessageReplyMarkup;
 import com.pengrad.telegrambot.request.SendAnimation;
+import com.pengrad.telegrambot.request.SendMediaGroup;
 import com.pengrad.telegrambot.request.SendMessage;
 import com.pengrad.telegrambot.request.SendPhoto;
 import com.pengrad.telegrambot.request.SendVideo;
@@ -61,6 +73,7 @@ import com.pengrad.telegrambot.response.SendResponse;
  *
  * @author Alexander Krasnogolowy - Initial contribution
  */
+@Component(scope = ServiceScope.PROTOTYPE, service = TelegramActions.class)
 @ThingActionsScope(name = "telegram")
 @NonNullByDefault
 public class TelegramActions implements ThingActions {
@@ -106,7 +119,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send an answer", description = "Send a Telegram answer using the Telegram API.")
-    public boolean sendTelegramAnswer(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramAnswer(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "callbackId") @Nullable String callbackId,
             @ActionInput(name = "messageId") @Nullable Long messageId,
             @ActionInput(name = "message") @Nullable String message) {
@@ -143,7 +157,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send an answer", description = "Send a Telegram answer using the Telegram API.")
-    public boolean sendTelegramAnswer(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramAnswer(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "replyId") @Nullable String replyId,
             @ActionInput(name = "message") @Nullable String message) {
         if (replyId == null) {
@@ -170,7 +185,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send an answer", description = "Send a Telegram answer using the Telegram API.")
-    public boolean sendTelegramAnswer(@ActionInput(name = "replyId") @Nullable String replyId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramAnswer(
+            @ActionInput(name = "replyId") @Nullable String replyId,
             @ActionInput(name = "message") @Nullable String message) {
         TelegramHandler localHandler = handler;
         if (localHandler != null) {
@@ -184,13 +200,15 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send a message", description = "Send a Telegram message using the Telegram API.")
-    public boolean sendTelegram(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegram(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "message") @Nullable String message) {
-        return sendTelegramGeneral(chatId, message, (String) null);
+        return sendTelegramGeneral(chatId, message, (String) null, null, null, null);
     }
 
     @RuleAction(label = "send a message", description = "Send a Telegram message using the Telegram API.")
-    public boolean sendTelegram(@ActionInput(name = "message") @Nullable String message) {
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegram(
+            @ActionInput(name = "message") @Nullable String message) {
         TelegramHandler localHandler = handler;
         if (localHandler != null) {
             for (Long chatId : localHandler.getReceiverChatIds()) {
@@ -202,16 +220,18 @@ public class TelegramActions implements ThingActions {
         return true;
     }
 
-    @RuleAction(label = "send a message", description = "Send a Telegram using the Telegram API.")
-    public boolean sendTelegramQuery(@ActionInput(name = "chatId") @Nullable Long chatId,
+    @RuleAction(label = "send a query", description = "Send a Telegram Query using the Telegram API.")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramQuery(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "message") @Nullable String message,
             @ActionInput(name = "replyId") @Nullable String replyId,
             @ActionInput(name = "buttons") @Nullable String... buttons) {
-        return sendTelegramGeneral(chatId, message, replyId, buttons);
+        return sendTelegramGeneral(chatId, message, replyId, null, null, null, buttons);
     }
 
-    @RuleAction(label = "send a message", description = "Send a Telegram using the Telegram API.")
-    public boolean sendTelegramQuery(@ActionInput(name = "message") @Nullable String message,
+    @RuleAction(label = "send a query", description = "Send a Telegram Query using the Telegram API.")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramQuery(
+            @ActionInput(name = "message") @Nullable String message,
             @ActionInput(name = "replyId") @Nullable String replyId,
             @ActionInput(name = "buttons") @Nullable String... buttons) {
         TelegramHandler localHandler = handler;
@@ -225,8 +245,9 @@ public class TelegramActions implements ThingActions {
         return true;
     }
 
-    private boolean sendTelegramGeneral(@ActionInput(name = "chatId") @Nullable Long chatId, @Nullable String message,
-            @Nullable String replyId, @Nullable String... buttons) {
+    private boolean sendTelegramGeneral(@Nullable Long chatId, @Nullable String message, @Nullable String replyId,
+            @Nullable Integer replyToMessageId, @Nullable Boolean disableNotification,
+            @Nullable Integer messageThreadId, @Nullable String... buttons) {
         if (message == null) {
             logger.warn("Message not defined; action skipped.");
             return false;
@@ -238,6 +259,15 @@ public class TelegramActions implements ThingActions {
         TelegramHandler localHandler = handler;
         if (localHandler != null) {
             SendMessage sendMessage = new SendMessage(chatId, message);
+            if (replyToMessageId != null) {
+                sendMessage.replyToMessageId(replyToMessageId);
+            }
+            if (disableNotification != null) {
+                sendMessage.disableNotification(disableNotification);
+            }
+            if (messageThreadId != null) {
+                sendMessage.messageThreadId(messageThreadId);
+            }
             if (localHandler.getParseMode() != null) {
                 sendMessage.parseMode(localHandler.getParseMode());
             }
@@ -265,7 +295,7 @@ public class TelegramActions implements ThingActions {
             try {
                 retMessage = localHandler.execute(sendMessage);
             } catch (Exception e) {
-                logger.warn("Exception occured whilst sending message:{}", e.getMessage());
+                logger.warn("Exception occurred whilst sending message:{}", e.getMessage());
             }
             if (!evaluateResponse(retMessage)) {
                 return false;
@@ -280,8 +310,43 @@ public class TelegramActions implements ThingActions {
         return false;
     }
 
+    @RuleAction(label = "delete a query", description = "Delete a Query using the Telegram API.")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean deleteTelegramQuery(
+            @ActionInput(name = "replyId") @Nullable String replyId) {
+        if (replyId == null) {
+            logger.warn("deleteTelegramQuery() - replyId not passed!");
+            return false;
+        }
+        TelegramHandler localHandler = handler;
+        if (localHandler == null) {
+            logger.debug("deleteTelegramQuery() - localHandler is null!");
+            return false;
+        }
+
+        Integer messageId = 0;
+        BaseResponse response = null;
+
+        for (Long chatId : localHandler.getReceiverChatIds()) {
+            messageId = localHandler.removeMessageId(chatId, replyId);
+            if (messageId == null) {
+                logger.debug("deleteTelegramQuery() - messageId not found!");
+                return false;
+            }
+            DeleteMessage deleteMessage = new DeleteMessage(chatId, messageId);
+            response = localHandler.execute(deleteMessage);
+
+            if (response == null || response.errorCode() != 0) {
+                logger.debug("deleteTelegramQuery() - DeleteMessage execution not successful! Response: {}", response);
+                return false;
+            }
+        }
+
+        return true;
+    } // public boolean deleteTelegramQuery(String replyId)
+
     @RuleAction(label = "send a message", description = "Send a Telegram using the Telegram API.")
-    public boolean sendTelegram(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegram(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "message") @Nullable String message,
             @ActionInput(name = "args") @Nullable Object... args) {
         if (message == null) {
@@ -291,7 +356,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send a message", description = "Send a Telegram using the Telegram API.")
-    public boolean sendTelegram(@ActionInput(name = "message") @Nullable String message,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegram(
+            @ActionInput(name = "message") @Nullable String message,
             @ActionInput(name = "args") @Nullable Object... args) {
         TelegramHandler localHandler = handler;
         if (localHandler != null) {
@@ -304,15 +370,47 @@ public class TelegramActions implements ThingActions {
         return true;
     }
 
+    @RuleAction(label = "@text/action.send-telegram-to.label", description = "@text/action.send-telegram-to.description")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramTo(
+            @ActionInput(name = "chatIds") @Nullable Long @Nullable [] chatIds,
+            @ActionInput(name = "message") @Nullable String message,
+            @ActionInput(name = "replyMessageId") @Nullable Integer replyMessageId,
+            @ActionInput(name = "silent") @Nullable Boolean silent,
+            @ActionInput(name = "messageThreadId") @Nullable Integer messageThreadId,
+            @ActionInput(name = "args") @Nullable Object... args) {
+        if (message == null) {
+            return false;
+        }
+        TelegramHandler localHandler = handler;
+        List<Long> chatIdentifiers = Collections.emptyList();
+        if (chatIds != null) {
+            Long[] chatIdentifiersArray = chatIds; // compiler vs null annotation fix
+            chatIdentifiers = List.of(chatIdentifiersArray);
+        } else if (localHandler != null) {
+            chatIdentifiers = localHandler.getReceiverChatIds();
+        }
+
+        boolean successful = true;
+        for (Long chatId : chatIdentifiers) {
+            // supports both with and without args
+            successful &= sendTelegramGeneral(chatId, String.format(message, args), (String) null, replyMessageId,
+                    silent, messageThreadId);
+        }
+
+        return successful;
+    }
+
     @RuleAction(label = "send a photo", description = "Send a picture using the Telegram API.")
-    public boolean sendTelegramPhoto(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramPhoto(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "photoURL") @Nullable String photoURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         return sendTelegramPhoto(chatId, photoURL, caption, null, null);
     }
 
     @RuleAction(label = "send a photo", description = "Send a picture using the Telegram API.")
-    public boolean sendTelegramPhoto(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramPhoto(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "photoURL") @Nullable String photoURL,
             @ActionInput(name = "caption") @Nullable String caption,
             @ActionInput(name = "username") @Nullable String username,
@@ -352,7 +450,13 @@ public class TelegramActions implements ThingActions {
                         byte[] fileContent = contentResponse.getContent();
                         sendPhoto = new SendPhoto(chatId, fileContent);
                     } else {
-                        logger.warn("Download from {} failed with status: {}", photoURL, contentResponse.getStatus());
+                        if (contentResponse.getStatus() == 401
+                                && contentResponse.getHeaders().get(HttpHeader.WWW_AUTHENTICATE).contains("igest")) {
+                            logger.warn("Download from {} failed due to no BASIC http auth support.", photoURL);
+                        } else {
+                            logger.warn("Download from {} failed with status: {}", photoURL,
+                                    contentResponse.getStatus());
+                        }
                         sendTelegram(chatId, caption + ":Download failed with status " + contentResponse.getStatus());
                         return false;
                     }
@@ -368,7 +472,7 @@ public class TelegramActions implements ThingActions {
                     temp = "file://" + photoURL;
                 }
                 try {
-                    sendPhoto = new SendPhoto(chatId, Path.of(new URL(temp).getPath()).toFile());
+                    sendPhoto = new SendPhoto(chatId, Path.of(URI.create(temp).toURL().getPath()).toFile());
                 } catch (MalformedURLException e) {
                     logger.warn("Malformed URL: {}", photoURL);
                     return false;
@@ -409,7 +513,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send a photo", description = "Send a Picture using the Telegram API.")
-    public boolean sendTelegramPhoto(@ActionInput(name = "photoURL") @Nullable String photoURL,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramPhoto(
+            @ActionInput(name = "photoURL") @Nullable String photoURL,
             @ActionInput(name = "caption") @Nullable String caption,
             @ActionInput(name = "username") @Nullable String username,
             @ActionInput(name = "password") @Nullable String password) {
@@ -425,13 +530,112 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send a photo", description = "Send a Picture using the Telegram API.")
-    public boolean sendTelegramPhoto(@ActionInput(name = "photoURL") @Nullable String photoURL,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramPhoto(
+            @ActionInput(name = "photoURL") @Nullable String photoURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         return sendTelegramPhoto(photoURL, caption, null, null);
     }
 
+    @RuleAction(label = "send a media group", description = "Send a Telegram media group using the Telegram API.")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramMediaGroup(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
+            @ActionInput(name = "mediaUrls") @Nullable List<String> mediaUrls,
+            @ActionInput(name = "mediaTypes") @Nullable List<String> mediaTypes) {
+        return sendTelegramMediaGroup(chatId, mediaUrls, mediaTypes, null, null, null);
+    }
+
+    @RuleAction(label = "send a media group", description = "Send a Telegram media group using the Telegram API.")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramMediaGroup(
+            @ActionInput(name = "mediaUrls") @Nullable List<String> mediaUrls,
+            @ActionInput(name = "mediaTypes") @Nullable List<String> mediaTypes) {
+        return sendTelegramMediaGroup(null, mediaUrls, mediaTypes, null, null, null);
+    }
+
+    @RuleAction(label = "send a media group", description = "Send a Telegram media group using the Telegram API.")
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramMediaGroup(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
+            @ActionInput(name = "mediaUrls") @Nullable List<String> mediaUrls,
+            @ActionInput(name = "mediaTypes") @Nullable List<String> mediaTypes,
+            @ActionInput(name = "replyToMessageId") @Nullable Integer replyToMessageId,
+            @ActionInput(name = "disableNotification") @Nullable Boolean disableNotification,
+            @ActionInput(name = "messageThreadId") @Nullable Integer messageThreadId) {
+        TelegramHandler localHandler = handler;
+        if (localHandler == null) {
+            logger.warn("TelegramActions: Action service ThingHandler is null");
+            return false;
+        }
+
+        if (mediaUrls == null || mediaUrls.isEmpty()) {
+            logger.warn("mediaUrls cannot be null or empty");
+            return false;
+        }
+
+        if (mediaTypes == null || mediaTypes.size() != mediaUrls.size()) {
+            logger.warn("mediaTypes must have the same size as mediaUrls");
+            return false;
+        }
+
+        List<Long> chatIdentifiers = (chatId != null) ? List.of(chatId) : localHandler.getReceiverChatIds();
+
+        boolean successful = true;
+        for (Long chat : chatIdentifiers) {
+            InputMedia<?>[] mediaArray = new InputMedia<?>[mediaUrls.size()];
+
+            for (int i = 0; i < mediaUrls.size(); i++) {
+                String url = mediaUrls.get(i);
+                String type = mediaTypes.get(i).toLowerCase();
+
+                try {
+                    InputMedia<?> media = switch (type) {
+                        case "photo" -> new InputMediaPhoto(url);
+                        case "video" -> new InputMediaVideo(url);
+                        case "animation" -> new InputMediaAnimation(url);
+                        case "audio" -> new InputMediaAudio(url);
+                        case "document" -> new InputMediaDocument(url);
+                        default -> {
+                            logger.warn("Unknown media type: {}", type);
+                            yield null;
+                        }
+                    };
+
+                    if (media == null) {
+                        successful = false;
+                        break;
+                    }
+
+                    mediaArray[i] = media;
+                } catch (IllegalArgumentException e) {
+                    logger.warn("Failed to create media object for URL {}: {}", url, e.getMessage());
+                    successful = false;
+                    break;
+                }
+            }
+
+            if (!successful) {
+                continue;
+            }
+
+            SendMediaGroup request = new SendMediaGroup(chat, mediaArray);
+
+            if (replyToMessageId != null) {
+                request.replyToMessageId(replyToMessageId);
+            }
+            if (disableNotification != null) {
+                request.disableNotification(disableNotification);
+            }
+            if (messageThreadId != null) {
+                request.messageThreadId(messageThreadId);
+            }
+
+            successful &= evaluateResponse(localHandler.execute(request));
+        }
+
+        return successful;
+    }
+
     @RuleAction(label = "send animation", description = "Send an Animation using the Telegram API.")
-    public boolean sendTelegramAnimation(@ActionInput(name = "animationURL") @Nullable String animationURL,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramAnimation(
+            @ActionInput(name = "animationURL") @Nullable String animationURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         TelegramHandler localHandler = handler;
         if (localHandler != null) {
@@ -445,7 +649,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send animation", description = "Send an Animation using the Telegram API.")
-    public boolean sendTelegramAnimation(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramAnimation(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "animationURL") @Nullable String animationURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         if (animationURL == null) {
@@ -493,7 +698,7 @@ public class TelegramActions implements ThingActions {
                 // Load video from local file system
                 logger.debug("Read file from local file system: {}", animationURL);
                 try {
-                    sendAnimation = new SendAnimation(chatId, Path.of(new URL(temp).getPath()).toFile());
+                    sendAnimation = new SendAnimation(chatId, Path.of(URI.create(temp).toURL().getPath()).toFile());
                 } catch (MalformedURLException e) {
                     logger.warn("Malformed URL, should start with http or file: {}", animationURL);
                     return false;
@@ -511,7 +716,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send video", description = "Send a Video using the Telegram API.")
-    public boolean sendTelegramVideo(@ActionInput(name = "videoURL") @Nullable String videoURL,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramVideo(
+            @ActionInput(name = "videoURL") @Nullable String videoURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         TelegramHandler localHandler = handler;
         if (localHandler != null) {
@@ -525,7 +731,8 @@ public class TelegramActions implements ThingActions {
     }
 
     @RuleAction(label = "send video", description = "Send a Video using the Telegram API.")
-    public boolean sendTelegramVideo(@ActionInput(name = "chatId") @Nullable Long chatId,
+    public @ActionOutput(label = "Success", type = "java.lang.Boolean") boolean sendTelegramVideo(
+            @ActionInput(name = "chatId") @Nullable Long chatId,
             @ActionInput(name = "videoURL") @Nullable String videoURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         final SendVideo sendVideo;
@@ -555,7 +762,13 @@ public class TelegramActions implements ThingActions {
                         byte[] fileContent = contentResponse.getContent();
                         sendVideo = new SendVideo(chatId, fileContent);
                     } else {
-                        logger.warn("Download from {} failed with status: {}", videoURL, contentResponse.getStatus());
+                        if (contentResponse.getStatus() == 401
+                                && contentResponse.getHeaders().get(HttpHeader.WWW_AUTHENTICATE).contains("igest")) {
+                            logger.warn("Download from {} failed due to no BASIC http auth support.", videoURL);
+                        } else {
+                            logger.warn("Download from {} failed with status: {}", videoURL,
+                                    contentResponse.getStatus());
+                        }
                         sendTelegram(chatId, caption + ":Download failed with status " + contentResponse.getStatus());
                         return false;
                     }
@@ -571,7 +784,7 @@ public class TelegramActions implements ThingActions {
                 // Load video from local file system with file://path
                 logger.debug("Read file from local file: {}", videoURL);
                 try {
-                    sendVideo = new SendVideo(chatId, Path.of(new URL(temp).getPath()).toFile());
+                    sendVideo = new SendVideo(chatId, Path.of(URI.create(temp).toURL().getPath()).toFile());
                 } catch (MalformedURLException e) {
                     logger.warn("Malformed URL, should start with http or file: {}", videoURL);
                     return false;
@@ -610,7 +823,7 @@ public class TelegramActions implements ThingActions {
 
     public static boolean sendTelegramAnimation(ThingActions actions, @Nullable String animationURL,
             @Nullable String caption) {
-        return ((TelegramActions) actions).sendTelegramVideo(animationURL, caption);
+        return ((TelegramActions) actions).sendTelegramAnimation(animationURL, caption);
     }
 
     public static boolean sendTelegramVideo(ThingActions actions, @Nullable String videoURL, @Nullable String caption) {
@@ -621,11 +834,26 @@ public class TelegramActions implements ThingActions {
         return ((TelegramActions) actions).sendTelegramAnswer(replyId, message);
     }
 
+    public static boolean deleteTelegramQuery(ThingActions actions, @Nullable String replyId) {
+        if (actions instanceof TelegramActions telegramActions) {
+            return telegramActions.deleteTelegramQuery(replyId);
+        } else {
+            throw new IllegalArgumentException("Instance is not a TelegramActions class.");
+        }
+    }
+
     /* APIs with chatId parameter */
 
     public static boolean sendTelegram(ThingActions actions, @Nullable Long chatId, @Nullable String format,
             @Nullable Object... args) {
         return ((TelegramActions) actions).sendTelegram(chatId, format, args);
+    }
+
+    public static boolean sendTelegramTo(ThingActions actions, @Nullable Long @Nullable [] chatIds,
+            @Nullable String message, @Nullable Integer replyMessageId, @Nullable Boolean silent,
+            @Nullable Integer messageThreadId, @Nullable Object... args) {
+        return ((TelegramActions) actions).sendTelegramTo(chatIds, message, replyMessageId, silent, messageThreadId,
+                args);
     }
 
     public static boolean sendTelegramQuery(ThingActions actions, @Nullable Long chatId, @Nullable String message,
@@ -645,7 +873,7 @@ public class TelegramActions implements ThingActions {
 
     public static boolean sendTelegramAnimation(ThingActions actions, @Nullable Long chatId,
             @Nullable String animationURL, @Nullable String caption) {
-        return ((TelegramActions) actions).sendTelegramVideo(chatId, animationURL, caption);
+        return ((TelegramActions) actions).sendTelegramAnimation(chatId, animationURL, caption);
     }
 
     public static boolean sendTelegramVideo(ThingActions actions, @Nullable Long chatId, @Nullable String videoURL,
@@ -658,13 +886,30 @@ public class TelegramActions implements ThingActions {
         return ((TelegramActions) actions).sendTelegramAnswer(chatId, replyId, message);
     }
 
+    public static boolean sendTelegramMediaGroup(ThingActions actions, @Nullable Long chatId,
+            @Nullable List<String> mediaUrls, @Nullable List<String> mediaTypes) {
+        return ((TelegramActions) actions).sendTelegramMediaGroup(chatId, mediaUrls, mediaTypes);
+    }
+
+    public static boolean sendTelegramMediaGroup(ThingActions actions, @Nullable List<String> mediaUrls,
+            @Nullable List<String> mediaTypes) {
+        return ((TelegramActions) actions).sendTelegramMediaGroup(mediaUrls, mediaTypes);
+    }
+
+    public static boolean sendTelegramMediaGroup(ThingActions actions, @Nullable Long chatId,
+            @Nullable List<String> mediaUrls, @Nullable List<String> mediaTypes, @Nullable Integer replyToMessageId,
+            @Nullable Boolean disableNotification, @Nullable Integer messageThreadId) {
+        return ((TelegramActions) actions).sendTelegramMediaGroup(chatId, mediaUrls, mediaTypes, replyToMessageId,
+                disableNotification, messageThreadId);
+    }
+
     public static boolean sendTelegramAnswer(ThingActions actions, @Nullable String chatId, @Nullable String replyId,
             @Nullable String message) {
-        if (actions instanceof TelegramActions) {
+        if (actions instanceof TelegramActions telegramActions) {
             if (chatId == null) {
                 return false;
             }
-            return ((TelegramActions) actions).sendTelegramAnswer(Long.valueOf(chatId), replyId, message);
+            return telegramActions.sendTelegramAnswer(Long.valueOf(chatId), replyId, message);
         } else {
             throw new IllegalArgumentException("Actions is not an instance of TelegramActions");
         }
@@ -677,11 +922,11 @@ public class TelegramActions implements ThingActions {
 
     public static boolean sendTelegramAnswer(ThingActions actions, @Nullable String chatId, @Nullable String callbackId,
             @Nullable String messageId, @Nullable String message) {
-        if (actions instanceof TelegramActions) {
+        if (actions instanceof TelegramActions telegramActions) {
             if (chatId == null) {
                 return false;
             }
-            return ((TelegramActions) actions).sendTelegramAnswer(Long.valueOf(chatId), callbackId,
+            return telegramActions.sendTelegramAnswer(Long.valueOf(chatId), callbackId,
                     messageId != null ? Long.parseLong(messageId) : null, message);
         } else {
             throw new IllegalArgumentException("Actions is not an instance of TelegramActions");
