@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,21 +14,21 @@ package org.openhab.binding.zway.internal.discovery;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.net.InterfaceAddress;
-import java.net.NetworkInterface;
 import java.net.Socket;
-import java.net.SocketException;
+import java.net.URI;
 import java.net.URL;
-import java.util.Enumeration;
+import java.util.List;
 import java.util.regex.Pattern;
 
-import org.apache.commons.net.util.SubnetUtils;
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.zway.internal.ZWayBindingConstants;
 import org.openhab.core.config.discovery.AbstractDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResult;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
 import org.openhab.core.config.discovery.DiscoveryService;
+import org.openhab.core.net.NetUtil;
 import org.openhab.core.thing.ThingUID;
 import org.osgi.service.component.annotations.Component;
 import org.slf4j.Logger;
@@ -39,6 +39,7 @@ import org.slf4j.LoggerFactory;
  *
  * @author Patrick Hecker - Initial contribution
  */
+@NonNullByDefault
 @Component(service = DiscoveryService.class, configurationPid = "discovery.zway")
 public class ZWayBridgeDiscoveryService extends AbstractDiscoveryService {
 
@@ -54,36 +55,11 @@ public class ZWayBridgeDiscoveryService extends AbstractDiscoveryService {
     private void scan() {
         logger.debug("Starting scan for Z-Way Server");
 
-        ValidateIPV4 validator = new ValidateIPV4();
+        List<InetAddress> addressesToScan = NetUtil.getFullRangeOfAddressesToScan();
+        logger.debug("Performing discovery on {} ip addresses", addressesToScan.size());
 
-        try {
-            Enumeration<NetworkInterface> enumNetworkInterface = NetworkInterface.getNetworkInterfaces();
-            while (enumNetworkInterface.hasMoreElements()) {
-                NetworkInterface networkInterface = enumNetworkInterface.nextElement();
-                if (networkInterface.isUp() && !networkInterface.isVirtual() && !networkInterface.isLoopback()) {
-                    for (InterfaceAddress address : networkInterface.getInterfaceAddresses()) {
-                        if (validator.isValidIPV4(address.getAddress().getHostAddress())) {
-                            String ipAddress = address.getAddress().getHostAddress();
-                            Short prefix = address.getNetworkPrefixLength();
-
-                            logger.debug("Scan IP address for Z-Way Server: {}", ipAddress);
-
-                            // Search on localhost first
-                            scheduler.execute(new ZWayServerScan(ipAddress));
-
-                            String subnet = ipAddress + "/" + prefix;
-                            SubnetUtils utils = new SubnetUtils(subnet);
-                            String[] addresses = utils.getInfo().getAllAddresses();
-
-                            for (String addressInSubnet : addresses) {
-                                scheduler.execute(new ZWayServerScan(addressInSubnet));
-                            }
-                        }
-                    }
-                }
-            }
-        } catch (SocketException e) {
-            logger.warn("Error occurred while searching Z-Way servers ({})", e.getMessage());
+        for (final InetAddress address : addressesToScan) {
+            scheduler.execute(new ZWayServerScan(address.getHostAddress()));
         }
     }
 
@@ -110,12 +86,12 @@ public class ZWayBridgeDiscoveryService extends AbstractDiscoveryService {
             }
 
             try {
-                URL url = new URL("http://" + ipAddress + ":8083/ZAutomation/api/v1/status");
+                URL url = URI.create("http://" + ipAddress + ":8083/ZAutomation/api/v1/status").toURL();
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
                 if (connection.getResponseCode() == 401) {
                     ThingUID thingUID = new ThingUID(ZWayBindingConstants.THING_TYPE_BRIDGE,
-                            ipAddress.replaceAll("\\.", "_"));
+                            ipAddress.replace(".", "_"));
 
                     // Attention: if is already present as thing in the ThingRegistry
                     // the configuration for thing will be updated!
@@ -124,7 +100,7 @@ public class ZWayBridgeDiscoveryService extends AbstractDiscoveryService {
                             .withLabel("Z-Way Server " + ipAddress).build();
                     thingDiscovered(discoveryResult);
                 }
-            } catch (Exception e) {
+            } catch (IOException e) {
                 logger.warn("Discovery resulted in an unexpected exception", e);
             }
         }
