@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,8 +14,8 @@ package org.openhab.io.hueemulation.internal.rest;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 
 import javax.ws.rs.DELETE;
@@ -91,7 +91,6 @@ public class UserManagement extends DefaultAbstractManagedProvider<HueUserAuthWi
     /**
      * Checks if the username exists in the whitelist
      */
-    @SuppressWarnings("null")
     public boolean authorizeUser(String userName) {
         HueUserAuth userAuth = cs.ds.config.whitelist.get(userName);
 
@@ -120,14 +119,13 @@ public class UserManagement extends DefaultAbstractManagedProvider<HueUserAuthWi
             return;
         }
         logger.debug("APIKey {} added", apiKey);
-        String l[] = label.split("#");
+        String[] l = label.split("#");
         HueUserAuthWithSecrets hueUserAuth = new HueUserAuthWithSecrets(l[0], l.length == 2 ? l[1] : "openhab", apiKey,
                 clientKey);
         cs.ds.config.whitelist.put(apiKey, hueUserAuth);
         add(hueUserAuth);
     }
 
-    @SuppressWarnings("null")
     private synchronized void removeUser(String apiKey) {
         HueUserAuth userAuth = cs.ds.config.whitelist.remove(apiKey);
         if (userAuth != null) {
@@ -161,8 +159,12 @@ public class UserManagement extends DefaultAbstractManagedProvider<HueUserAuthWi
                     "link button not pressed");
         }
 
-        final HueCreateUser userRequest;
-        userRequest = cs.gson.fromJson(body, HueCreateUser.class);
+        final HueCreateUser userRequest = cs.gson.fromJson(body, HueCreateUser.class);
+
+        if (userRequest == null) {
+            return NetworkUtils.singleError(cs.gson, uri, HueResponse.INVALID_JSON, "Empty body");
+        }
+
         if (userRequest.devicetype.isEmpty()) {
             return NetworkUtils.singleError(cs.gson, uri, HueResponse.INVALID_JSON,
                     "Invalid request: No devicetype set");
@@ -172,7 +174,7 @@ public class UserManagement extends DefaultAbstractManagedProvider<HueUserAuthWi
         String clientKey = UUID.randomUUID().toString();
         addUser(apiKey, clientKey, userRequest.devicetype);
         HueSuccessResponseCreateUser h = new HueSuccessResponseCreateUser(apiKey, clientKey);
-        String result = cs.gson.toJson(Collections.singleton(new HueResponse(h)), new TypeToken<List<?>>() {
+        String result = cs.gson.toJson(Set.of(new HueResponse(h)), new TypeToken<List<?>>() {
         }.getType());
 
         return Response.ok(result).build();
